--- a/src/lib/i18n/locales/ar/translation.json
+++ b/src/lib/i18n/locales/ar/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "تعديل هذه الإعدادات سيطبق التغييرات على جميع المستخدمين بشكل عام.",
 	"admin": "المسؤول",
 	"Admin": "المسؤول",
@@ -130,6 +131,7 @@
 	"API Key created.": "تم إنشاء مفتاح واجهة API.",
 	"API Key Endpoint Restrictions": "قيود نقاط نهاية مفتاح API",
 	"API keys": "مفاتيح واجهة برمجة التطبيقات (API)",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "ديسمبر",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "افتراضي",
 	"Default (Open AI)": "افتراضي (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "نموذج التضمين",
 	"Embedding Model Engine": "تضمين محرك النموذج",
 	"Embedding model set to \"{{embedding_model}}\"": "تم تعيين نموذج التضمين على \"{{embedding_model}}\"",
-	"Enable API Key": "تفعيل مفتاح API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "تفعيل توليد الإكمال التلقائي لرسائل الدردشة",
 	"Enable Code Execution": "تفعيل تنفيذ الكود",
 	"Enable Code Interpreter": "تفعيل مفسر الكود",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "تأكد من أن ملف CSV الخاص بك يتضمن 4 أعمدة بهذا الترتيب: Name, Email, Password, Role.",
 	"Enter {{role}} message here": "أدخل رسالة {{role}} هنا",
 	"Enter a detail about yourself for your LLMs to recall": "ادخل معلومات عنك تريد أن يتذكرها الموديل",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "أدخل نقطة نهاية تحليل المستندات",
 	"Enter Document Intelligence Key": "أدخل مفتاح تحليل المستندات",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "أدخل النطاقات مفصولة بفواصل (مثال: example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "أدخل مفتاح API لـ Exa",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "تصدير المحادثة (.json)",
 	"Export Chats": "تصدير جميع الدردشات",
 	"Export Config to JSON File": "تصدير الإعدادات إلى ملف JSON",
+	"Export Models": "",
 	"Export Presets": "تصدير الإعدادات المسبقة",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "تصدير إلى CSV",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "استيراد الدردشات",
 	"Import Config from JSON File": "استيراد الإعدادات من ملف JSON",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "استيراد الإعدادات المسبقة",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "تحديث مهم",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "تضمين",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "أضف الخيار `--api-auth` عند تشغيل stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "قم بتضمين علامة `-api` عند تشغيل Stable-diffusion-webui",
 	"Includes SharePoint": "يتضمن SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "يؤثر على سرعة استجابة الخوارزمية للتغذية الراجعة من النص المُولد. معدل تعلم منخفض يؤدي إلى تعديلات أبطأ، بينما معدل أعلى يجعلها أكثر استجابة.",
 	"Info": "معلومات",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "",
 	"New Password": "كلمة المرور الجديدة",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1646,6 +1656,7 @@
 	"Type Hugging Face Resolve (Download) URL": "اكتب عنوان URL لحل مشكلة الوجه (تنزيل).",
 	"Uh-oh! There was an issue with the response.": "أوه! حدثت مشكلة في الرد.",
 	"UI": "واجهة المستخدم",
+	"UI Scale": "",
 	"Unarchive All": "إلغاء أرشفة الكل",
 	"Unarchive All Archived Chats": "إلغاء أرشفة جميع المحادثات المؤرشفة",
 	"Unarchive Chat": "إلغاء أرشفة المحادثة",
@@ -1719,6 +1730,8 @@
 	"Voice": "الصوت",
 	"Voice Input": "إدخال صوتي",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "تحذير",
 	"Warning:": "تحذير:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "تحذير: تفعيل هذا الخيار سيسمح للمستخدمين برفع كود عشوائي على الخادم.",
