--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "При промяна на тези настройки промените се прилагат за всички потребители.",
 	"admin": "админ",
 	"Admin": "Администратор",
@@ -130,6 +131,7 @@
 	"API Key created.": "API Ключ създаден.",
 	"API Key Endpoint Restrictions": "Ограничения на крайните точки за API Ключ",
 	"API keys": "API Ключове",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "Декември",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "По подразбиране",
 	"Default (Open AI)": "По подразбиране (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Модел за вграждане",
 	"Embedding Model Engine": "Двигател на модела за вграждане",
 	"Embedding model set to \"{{embedding_model}}\"": "Модел за вграждане е настроен на \"{{embedding_model}}\"",
-	"Enable API Key": "Активиране на API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Активиране на автоматично довършване на съобщения в чата",
 	"Enable Code Execution": "",
 	"Enable Code Interpreter": "Активиране на интерпретатор на код",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Уверете се, че вашият CSV файл включва 4 колони в следния ред: Име, Имейл, Парола, Роля.",
 	"Enter {{role}} message here": "Въведете съобщение за {{role}} тук",
 	"Enter a detail about yourself for your LLMs to recall": "Въведете подробности за себе си, за да ги запомнят вашите LLMs",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "",
 	"Enter Document Intelligence Key": "",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Въведете домейни, разделени със запетаи (напр. example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Въведете API ключ за Exa",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Експортиране на чат (.json)",
 	"Export Chats": "Експортване на чатове",
 	"Export Config to JSON File": "Експортиране на конфигурацията в JSON файл",
+	"Export Models": "",
 	"Export Presets": "Експортиране на предварителни настройки",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "Експортиране в CSV",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "Импортване на чатове",
 	"Import Config from JSON File": "Импортиране на конфигурация от JSON файл",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "Импортиране на предварителни настройки",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Важна актуализация",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Включи",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "",
 	"Include `--api` flag when running stable-diffusion-webui": "",
 	"Includes SharePoint": "Включва SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "",
 	"Info": "Информация",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "Нова бележка",
 	"New Password": "Нова парола",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Въведете Hugging Face Resolve (Изтегляне) URL",
 	"Uh-oh! There was an issue with the response.": "Ох! Имаше проблем с отговора.",
 	"UI": "Потребителски интерфейс",
+	"UI Scale": "",
 	"Unarchive All": "Разархивирай всички",
 	"Unarchive All Archived Chats": "Разархивирай всички архивирани чатове",
 	"Unarchive Chat": "Разархивирай чат",
@@ -1715,6 +1726,8 @@
 	"Voice": "Глас",
 	"Voice Input": "Гласов вход",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Предупреждение",
 	"Warning:": "Предупреждение:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Предупреждение: Активирането на това ще позволи на потребителите да качват произволен код на сървъра.",
