--- a/src/lib/i18n/locales/bo-TB/translation.json
+++ b/src/lib/i18n/locales/bo-TB/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "སྒྲིག་འགོད་འདི་དག་ལེགས་སྒྲིག་བྱས་ན་བེད་སྤྱོད་མཁན་ཡོངས་ལ་འགྱུར་བ་དེ་བཀོལ་སྤྱོད་བྱེད་ངེས།",
 	"admin": "དོ་དམ་པ།",
 	"Admin": "དོ་དམ་པ།",
@@ -130,6 +131,7 @@
 	"API Key created.": "API ལྡེ་མིག་བཟོས་ཟིན།",
 	"API Key Endpoint Restrictions": "API ལྡེ་མིག་མཇུག་མཐུད་ཚད་བཀག",
 	"API keys": "API ལྡེ་མིག",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "ཟླ་བ་བཅུ་གཉིས་པ།",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "སྔོན་སྒྲིག",
 	"Default (Open AI)": "སྔོན་སྒྲིག (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "ཚུད་འཇུག་དཔེ་དབྱིབས།",
 	"Embedding Model Engine": "ཚུད་འཇུག་དཔེ་དབྱིབས་འཕྲུལ་འཁོར།",
 	"Embedding model set to \"{{embedding_model}}\"": "ཚུད་འཇུག་དཔེ་དབྱིབས་ \"{{embedding_model}}\" ལ་བཀོད་སྒྲིག་བྱས།",
-	"Enable API Key": "API ལྡེ་མིག་སྒུལ་བསྐྱོད་བྱེད་པ།",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "ཁ་བརྡའི་འཕྲིན་ཡིག་གི་ཆེད་དུ་རང་འཚང་བཟོ་སྐྲུན་སྒུལ་བསྐྱོད་བྱེད་པ།",
 	"Enable Code Execution": "ཀོཌ་ལག་བསྟར་སྒུལ་བསྐྱོད་བྱེད་པ།",
 	"Enable Code Interpreter": "ཀོཌ་འགྲེལ་བཤད་སྒུལ་བསྐྱོད་བྱེད་པ།",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "གནས་སྐབས་ཁ་བརྡ་བཙན་བཀོལ་བྱེད་པ།",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "ཁྱེད་ཀྱི་ CSV ཡིག་ཆར་གོ་རིམ་འདི་ལྟར། མིང་། ཡིག་ཟམ། གསང་གྲངས། གནས་ཚད། སྟར་པ་ ༤ ཚུད་ཡོད་པ་ཁག་ཐེག་བྱེད་རོགས།",
 	"Enter {{role}} message here": "{{role}} ཡི་འཕྲིན་འདིར་འཇུག་པ།",
 	"Enter a detail about yourself for your LLMs to recall": "ཁྱེད་ཀྱི་ LLMs ཡིས་ཕྱིར་དྲན་ཆེད་དུ་ཁྱེད་རང་གི་སྐོར་གྱི་ཞིབ་ཕྲ་ཞིག་འཇུག་པ།",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Docling སར་བར་གྱི་ URL འཇུག་པ།",
 	"Enter Document Intelligence Endpoint": "ཡིག་ཆའི་རིག་ནུས་མཇུག་མཐུད་འཇུག་པ།",
 	"Enter Document Intelligence Key": "ཡིག་ཆའི་རིག་ནུས་ལྡེ་མིག་འཇུག་པ།",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "ཚེག་བསྐུངས་ཀྱིས་ལོགས་སུ་བཀར་བའི་ཁྱབ་ཁོངས་འཇུག་པ། (དཔེར་ན། example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Exa API ལྡེ་མིག་འཇུག་པ།",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "ཁ་བརྡ་ཕྱིར་གཏོང་ (.json)",
 	"Export Chats": "ཁ་བརྡ་ཕྱིར་གཏོང་།",
 	"Export Config to JSON File": "སྒྲིག་འགོད་ JSON ཡིག་ཆར་ཕྱིར་གཏོང་།",
+	"Export Models": "",
 	"Export Presets": "སྔོན་སྒྲིག་ཕྱིར་གཏོང་།",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "CSV ལ་ཕྱིར་གཏོང་།",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "ཕྱི་རོལ།",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "ཁ་བརྡ་ནང་འདྲེན།",
 	"Import Config from JSON File": "JSON ཡིག་ཆ་ནས་སྒྲིག་འགོད་ནང་འདྲེན།",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "སྔོན་སྒྲིག་ནང་འདྲེན།",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "གལ་ཆེ་པའི་གསར་སྒྱུར་",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "ཚུད་པ།",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "stable-diffusion-webui ལག་བསྟར་བྱེད་སྐབས་ `--api-auth` དར་ཆ་ཚུད་པ།",
 	"Include `--api` flag when running stable-diffusion-webui": "stable-diffusion-webui ལག་བསྟར་བྱེད་སྐབས་ `--api` དར་ཆ་ཚུད་པ།",
 	"Includes SharePoint": "SharePoint ཚུད་པ།",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "བཟོས་པའི་ཡིག་རྐྱང་ནས་ཐོན་པའི་བསམ་འཆར་ལ་ཨང་རྩིས་ཀྱིས་ཇི་ཙམ་མགྱོགས་པོར་ལན་འདེབས་བྱེད་པར་ཤུགས་རྐྱེན་ཐེབས་པ། སྦྱོང་ཚད་དམའ་བས་ལེགས་སྒྲིག་དལ་བ་ཡོང་ངེས། དེ་བཞིན་དུ་སྦྱོང་ཚད་མཐོ་བས་ཨང་རྩིས་དེ་ལན་འདེབས་ཆེ་བ་བཟོ་ངེས།",
 	"Info": "གནས་ཚུལ།",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "",
 	"New Password": "གསང་གྲངས་གསར་པ།",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1641,6 +1651,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Hugging Face Resolve (ཕབ་ལེན།) URL མནན་པ།",
 	"Uh-oh! There was an issue with the response.": "ཨོའོ། ལན་ལ་དཀའ་ངལ་ཞིག་བྱུང་སོང་།",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "ཡོངས་རྫོགས་ཕྱིར་འདོན།",
 	"Unarchive All Archived Chats": "ཡིག་མཛོད་དུ་བཞག་པའི་ཁ་བརྡ་ཡོངས་རྫོགས་ཕྱིར་འདོན།",
 	"Unarchive Chat": "ཁ་བརྡ་ཕྱིར་འདོན།",
@@ -1714,6 +1725,8 @@
 	"Voice": "སྐད།",
 	"Voice Input": "སྐད་ཀྱི་ནང་འཇུག",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "ཉེན་བརྡ།",
 	"Warning:": "ཉེན་བརྡ།:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "ཉེན་བརྡ།: འདི་སྒུལ་བསྐྱོད་བྱས་ན་བེད་སྤྱོད་མཁན་ཚོས་སར་བར་སྟེང་གང་འདོད་ཀྱི་ཀོཌ་སྤར་བར་གནང་བ་སྤྲོད་ངེས།",
