--- a/src/lib/i18n/locales/cs-CZ/translation.json
+++ b/src/lib/i18n/locales/cs-CZ/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "Dodatečná konfigurace",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "Další možnosti konfigurace pro marker. Měl by to být řetězec JSON s páry klíč-hodnota. Například: '{\"key\": \"value\"}'. Podporované klíče zahrnují: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Úprava těchto nastavení se projeví u všech uživatelů.",
 	"admin": "administrátor",
 	"Admin": "Administrátor",
@@ -130,6 +131,7 @@
 	"API Key created.": "API klíč byl vytvořen.",
 	"API Key Endpoint Restrictions": "Omezení koncových bodů API klíče",
 	"API keys": "API klíče",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "Verze API",
 	"API Version is required": "Verze API je vyžadována",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "Datalab Marker API",
 	"DD/MM/YYYY": "DD.MM.RRRR",
 	"December": "Prosinec",
+	"Decrease UI Scale": "",
 	"Deepgram": "Deepgram",
 	"Default": "Výchozí",
 	"Default (Open AI)": "Výchozí (OpenAI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Model pro vektorizaci",
 	"Embedding Model Engine": "Jádro modelu pro vektorizaci",
 	"Embedding model set to \"{{embedding_model}}\"": "Model pro vektorizaci nastaven na \"{{embedding_model}}\"",
-	"Enable API Key": "Povolit API klíč",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Povolit generování automatického dokončování pro zprávy v konverzaci",
 	"Enable Code Execution": "Povolit spouštění kódu",
 	"Enable Code Interpreter": "Povolit interpret kódu",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "URL koncového bodu",
 	"Enforce Temporary Chat": "Vynutit dočasnou konverzaci",
 	"Enhance": "Vylepšit",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Ujistěte se, že váš CSV soubor obsahuje 4 sloupce v tomto pořadí: Jméno, E-mail, Heslo, Role.",
 	"Enter {{role}} message here": "Zde zadejte zprávu {{role}}",
 	"Enter a detail about yourself for your LLMs to recall": "Zadejte podrobnost o sobě, kterou si vaše LLM mají pamatovat.",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Zadejte URL serveru Docling",
 	"Enter Document Intelligence Endpoint": "Zadejte koncový bod Document Intelligence",
 	"Enter Document Intelligence Key": "Zadejte klíč pro Document Intelligence",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Zadejte domény oddělené čárkami (např. priklad.cz,stranka.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Zadejte API klíč pro Exa",
 	"Enter External Document Loader API Key": "Zadejte API klíč pro externí zavaděč dokumentů",
 	"Enter External Document Loader URL": "Zadejte URL pro externí zavaděč dokumentů",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Exportovat konverzaci (.json)",
 	"Export Chats": "Exportovat konverzace",
 	"Export Config to JSON File": "Exportovat konfiguraci do souboru JSON",
+	"Export Models": "",
 	"Export Presets": "Exportovat předvolby",
 	"Export Prompt Suggestions": "Exportovat návrhy instrukcí",
+	"Export Prompts": "",
 	"Export to CSV": "Exportovat do CSV",
+	"Export Tools": "",
 	"Export Users": "Exportovat uživatele",
 	"External": "Externí",
 	"External Document Loader URL required.": "Je vyžadována URL externího zavaděče dokumentů.",
@@ -864,16 +871,20 @@
 	"Import Chats": "Importovat konverzace",
 	"Import Config from JSON File": "Importovat konfiguraci ze souboru JSON",
 	"Import From Link": "Importovat z odkazu",
+	"Import Models": "",
 	"Import Notes": "Importovat poznámky",
 	"Import Presets": "Importovat předvolby",
 	"Import Prompt Suggestions": "Importovat návrhy instrukcí",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Důležitá aktualizace",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Zahrnout",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Při spouštění stable-diffusion-webui použijte přepínač `--api-auth`.",
 	"Include `--api` flag when running stable-diffusion-webui": "Při spouštění stable-diffusion-webui použijte přepínač `--api`.",
 	"Includes SharePoint": "Zahrnuje SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Ovlivňuje, jak rychle algoritmus reaguje na zpětnou vazbu z generovaného textu. Nižší míra učení povede k pomalejším úpravám, zatímco vyšší míra učení učiní algoritmus citlivějším.",
 	"Info": "Info",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "Nová funkce",
 	"New Knowledge": "Nová znalost",
 	"New Model": "Nový model",
-	"New Note": "Nová poznámka",
 	"New Password": "Nové heslo",
 	"New Prompt": "Nová instrukce",
 	"New Temporary Chat": "",
@@ -1644,6 +1654,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Zadejte URL pro stažení z Hugging Face.",
 	"Uh-oh! There was an issue with the response.": "Jejda! Vyskytl se problém s odpovědí.",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "Zrušit archivaci všech",
 	"Unarchive All Archived Chats": "Zrušit archivaci všech archivovaných konverzací",
 	"Unarchive Chat": "Zrušit archivaci konverzace",
@@ -1717,6 +1728,8 @@
 	"Voice": "Hlas",
 	"Voice Input": "Hlasový vstup",
 	"Voice mode": "Hlasový režim",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Varování",
 	"Warning:": "Varování:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Varování: Povolení této volby umožní uživatelům nahrávat na server libovolný kód.",
