--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "Zusätzliche Konfiguration",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "Zusätzliche Konfigurationsoptionen für den Marker. Dies sollte eine JSON-Zeichenfolge mit Schlüssel-Wert-Paaren sein. Zum Beispiel '{\"key\": \"value\"}'. Unterstützte Schlüssel sind: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level",
 	"Additional Parameters": "Weitere Parameter",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Das Anpassen dieser Einstellungen wird Änderungen universell auf alle Benutzer anwenden.",
 	"admin": "Administrator",
 	"Admin": "Administrator",
@@ -130,6 +131,7 @@
 	"API Key created.": "API-Schlüssel erstellt.",
 	"API Key Endpoint Restrictions": "API-Schlüssel Endpunkteinschränkungen",
 	"API keys": "API-Schlüssel",
+	"API Keys": "",
 	"API Mode": "API-Modus",
 	"API Version": "API Version",
 	"API Version is required": "API-Version ist erforderlich",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "Datalab Marker API",
 	"DD/MM/YYYY": "TT/MM/JJJJ",
 	"December": "Dezember",
+	"Decrease UI Scale": "",
 	"Deepgram": "Deepgram",
 	"Default": "Standard",
 	"Default (Open AI)": "Standard (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Embedding-Modell",
 	"Embedding Model Engine": "Embedding-Modell-Engine",
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding-Modell auf \"{{embedding_model}}\" gesetzt",
-	"Enable API Key": "API-Schlüssel aktivieren",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Automatische Vervollständigung für Chat-Nachrichten aktivieren",
 	"Enable Code Execution": "Codeausführung aktivieren",
 	"Enable Code Interpreter": "Code-Interpreter aktivieren",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "Endpunkt-URL",
 	"Enforce Temporary Chat": "Temporären Chat erzwingen",
 	"Enhance": "Verbessern",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Stellen Sie sicher, dass Ihre CSV-Datei 4 Spalten in dieser Reihenfolge enthält: Name, E-Mail, Passwort, Rolle.",
 	"Enter {{role}} message here": "Geben Sie die {{role}}-Nachricht hier ein",
 	"Enter a detail about yourself for your LLMs to recall": "Geben Sie ein Detail über sich selbst ein, das Ihre Sprachmodelle (LLMs) sich merken sollen",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Docling Server-URL eingeben",
 	"Enter Document Intelligence Endpoint": "Endpunkt für Document Intelligence eingeben",
 	"Enter Document Intelligence Key": "Schlüssel für Document Intelligence eingeben",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Geben Sie die Domains durch Kommas separiert ein (z. B. example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Geben Sie den Exa-API-Schlüssel ein",
 	"Enter External Document Loader API Key": "API-Schlüssel für externen Dokumenten-Loader eingeben",
 	"Enter External Document Loader URL": "URL für externen Dokumenten-Loader eingeben",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Chat exportieren (.json)",
 	"Export Chats": "Chats exportieren",
 	"Export Config to JSON File": "Exportiere Konfiguration als JSON-Datei",
+	"Export Models": "",
 	"Export Presets": "Voreinstellungen exportieren",
 	"Export Prompt Suggestions": "Prompt-Vorschläge exportieren",
+	"Export Prompts": "",
 	"Export to CSV": "Als CSV exportieren",
+	"Export Tools": "",
 	"Export Users": "Benutzer exportieren",
 	"External": "Extern",
 	"External Document Loader URL required.": "URL für externen Dokumenten-Loader erforderlich.",
@@ -864,16 +871,20 @@
 	"Import Chats": "Chats importieren",
 	"Import Config from JSON File": "Konfiguration aus JSON-Datei importieren",
 	"Import From Link": "Von Link importieren",
+	"Import Models": "",
 	"Import Notes": "Notizen importieren",
 	"Import Presets": "Voreinstellungen importieren",
 	"Import Prompt Suggestions": "Prompt-Vorschläge importieren",
+	"Import Prompts": "",
 	"Import successful": "Import erfolgreich",
+	"Import Tools": "",
 	"Important Update": "Wichtiges Update",
 	"In order to force OCR, performing OCR must be enabled.": "Um die OCR erzwingen zu können, muss die Durchführung der OCR aktiviert sein.",
 	"Include": "Einschließen",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Fügen Sie beim Ausführen von stable-diffusion-webui die Option `--api-auth` hinzu",
 	"Include `--api` flag when running stable-diffusion-webui": "Fügen Sie beim Ausführen von stable-diffusion-webui die Option `--api` hinzu",
 	"Includes SharePoint": "Enthält SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Beeinflusst, wie schnell der Algorithmus auf Feedback aus dem generierten Text reagiert. Eine niedrigere Lernrate führt zu langsameren Anpassungen, während eine höhere Lernrate den Algorithmus reaktionsschneller macht.",
 	"Info": "Info",
 	"Initials": "Initialen",
@@ -1066,7 +1077,6 @@
 	"New Function": "Neue Funktion",
 	"New Knowledge": "Neues Wissen",
 	"New Model": "Neues Modell",
-	"New Note": "Neue Notiz",
 	"New Password": "Neues Passwort",
 	"New Prompt": "Neuer Prompt",
 	"New Temporary Chat": "Neuer Temporärer Chat",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Geben Sie die Hugging Face Resolve-URL ein",
 	"Uh-oh! There was an issue with the response.": "Oh nein! Es gab ein Problem mit der Antwort.",
 	"UI": "Oberfläche",
+	"UI Scale": "",
 	"Unarchive All": "Alle wiederherstellen",
 	"Unarchive All Archived Chats": "Alle archivierten Chats wiederherstellen",
 	"Unarchive Chat": "Chat wiederherstellen",
@@ -1715,6 +1726,8 @@
 	"Voice": "Stimme",
 	"Voice Input": "Spracheingabe",
 	"Voice mode": "Sprachmodus",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Warnung",
 	"Warning:": "Warnung:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Warnung: Wenn Sie dies aktivieren, können Benutzer beliebigen Code auf dem Server hochladen.",
