--- a/src/lib/i18n/locales/el-GR/translation.json
+++ b/src/lib/i18n/locales/el-GR/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "Πρόσθετες Παράμετροι",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Η ρύθμιση αυτών των παραμέτρων θα εφαρμόσει τις αλλαγές καθολικά σε όλους τους χρήστες.",
 	"admin": "διαχειριστής",
 	"Admin": "Διαχειριστής",
@@ -130,6 +131,7 @@
 	"API Key created.": "Το κλειδί API δημιουργήθηκε.",
 	"API Key Endpoint Restrictions": "Περιορισμοί Κλειδιού API",
 	"API keys": "κλειδιά API",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "Έκδοση API",
 	"API Version is required": "Η Έκδοση API είναι απαραίτητη",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "ΗΗ/ΜΜ/ΕΕΕΕ",
 	"December": "Δεκέμβριος",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Προεπιλογή",
 	"Default (Open AI)": "Προεπιλογή (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Μοντέλο Ενσωμάτωσης",
 	"Embedding Model Engine": "Μηχανή Μοντέλου Ενσωμάτωσης",
 	"Embedding model set to \"{{embedding_model}}\"": "Το μοντέλο ενσωμάτωσης έχει οριστεί σε \"{{embedding_model}}\"",
-	"Enable API Key": "Ενεργοποίηση API κλειδιού",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Ενεργοποίηση αυτόματης συμπλήρωσης για συνομιλίες",
 	"Enable Code Execution": "Ενεργοποίηση Εκτέλεσης Κώδικα",
 	"Enable Code Interpreter": "Ενεργοποίηση Διερμηνέα Κώδικα",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Βεβαιωθείτε ότι το αρχείο CSV σας περιλαμβάνει 4 στήλες με αυτή τη σειρά: Όνομα, Email, Κωδικός, Ρόλος.",
 	"Enter {{role}} message here": "Εισάγετε το μήνυμα {{role}} εδώ",
 	"Enter a detail about yourself for your LLMs to recall": "Εισάγετε μια λεπτομέρεια για τον εαυτό σας ώστε τα LLMs να την ανακαλούν",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "",
 	"Enter Document Intelligence Key": "",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Εισάγετε domains χωρισμένα με κόμματα (π.χ. example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "",
 	"Enter External Document Loader API Key": "Εισάγετε το API κλειδί του εξωτερικού προγράμματος φόρτωσης εγγράφων",
 	"Enter External Document Loader URL": "Εισάγετε το URL του εξωτερικού προγράμματος φόρτωσης εγγράφων",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Εξαγωγή συνομιλίας (.json)",
 	"Export Chats": "Εξαγωγή Συνομιλιών",
 	"Export Config to JSON File": "Εξαγωγή Διαμόρφωσης σε Αρχείο JSON",
+	"Export Models": "",
 	"Export Presets": "Εξαγωγή Προκαθορισμένων",
 	"Export Prompt Suggestions": "Εξαγωγή Προτεινόμενων Προτροπών",
+	"Export Prompts": "",
 	"Export to CSV": "Εξαγωγή σε CSV",
+	"Export Tools": "",
 	"Export Users": "Εξαγωγή Χρηστών",
 	"External": "Εξωτερική",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "Εισαγωγή Συνομιλιών",
 	"Import Config from JSON File": "Εισαγωγή Διαμόρφωσης από Αρχείο JSON",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "Εισαγωγή Προκαθορισμένων",
 	"Import Prompt Suggestions": "Εισαγωγή Προτεινόμενων Προτροπών",
+	"Import Prompts": "",
 	"Import successful": "Εισαγωγή επιτυχής",
+	"Import Tools": "",
 	"Important Update": "Σημαντική ενημέρωση",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Συμπερίληψη",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Συμπεριλάβετε το flag `--api-auth` όταν τρέχετε το stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Συμπεριλάβετε το flag `--api` όταν τρέχετε το stable-diffusion-webui",
 	"Includes SharePoint": "Περιλαμβάνει το SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "",
 	"Info": "Πληροφορίες",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "Νέα Λειτουργία",
 	"New Knowledge": "Νέο Knowledge",
 	"New Model": "Νέο Μοντέλο",
-	"New Note": "Νέα Σημείωση",
 	"New Password": "Νέος Κωδικός",
 	"New Prompt": "Νέα Προτροπή",
 	"New Temporary Chat": "",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Τύπος URL Ανάλυσης Hugging Face Resolve (Λήψη)",
 	"Uh-oh! There was an issue with the response.": "Ωχ! Παρουσιάστηκε κάποιο σφάλμα με την απάντηση.",
 	"UI": "Διεπαφή Χρήστη (UI)",
+	"UI Scale": "",
 	"Unarchive All": "Απο-αρχειοθέτηση Όλων",
 	"Unarchive All Archived Chats": "Απο-αρχειοθέτηση Όλων των Αρχειοθετημένων Συνομιλιών",
 	"Unarchive Chat": "Απο-αρχειοθέτηση Συνομιλίας",
@@ -1715,6 +1726,8 @@
 	"Voice": "Φωνή",
 	"Voice Input": "Εισαγωγή Φωνής",
 	"Voice mode": "Λειτουργία Φωνής",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Προειδοποίηση",
 	"Warning:": "Προειδοποίηση:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Προειδοποίηση: Η ενεργοποίηση αυτού θα επιτρέψει στους χρήστες να ανεβάσουν αυθαίρετο κώδικα στον διακομιστή.",
