--- a/src/lib/i18n/locales/et-EE/translation.json
+++ b/src/lib/i18n/locales/et-EE/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "Täiendav seadistus",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "Additional configuration options for marker. This should be a JSON string koos key-value pairs. For example, '{\"võti\": \"value\"}'. Supported keys include: keela_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_lehed, drop_repeated_text, layout_coverage_threshold, merge_threshold, kõrgus_tolerance, gap_threshold, pilt_threshold, min_rida_length, tase_count, vaikimisi_tase",
 	"Additional Parameters": "Täiendavad parameetrid",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Nende seadete kohandamine rakendab muudatused universaalselt kõigile kasutajatele.",
 	"admin": "admin",
 	"Admin": "Administraator",
@@ -130,6 +131,7 @@
 	"API Key created.": "API võti loodud.",
 	"API Key Endpoint Restrictions": "API võtme lõpp-punkti piirangud",
 	"API keys": "API võtmed",
+	"API Keys": "",
 	"API Mode": "API režiim",
 	"API Version": "API versioon",
 	"API Version is required": "API versioon on nõutav",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "Datalab Marker API",
 	"DD/MM/YYYY": "PP/KK/AAAA",
 	"December": "Detsember",
+	"Decrease UI Scale": "",
 	"Deepgram": "Deepgram",
 	"Default": "Vaikimisi",
 	"Default (Open AI)": "Vaikimisi (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Manustamise mudel",
 	"Embedding Model Engine": "Manustamise mudeli mootor",
 	"Embedding model set to \"{{embedding_model}}\"": "Manustamise mudel määratud kui \"{{embedding_model}}\"",
-	"Enable API Key": "Luba API võti",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Luba automaattäitmise genereerimine vestlussõnumitele",
 	"Enable Code Execution": "Luba koodi täitmine",
 	"Enable Code Interpreter": "Luba koodi interpretaator",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "Lõpp-punkt URL",
 	"Enforce Temporary Chat": "Enforce Temporary Vestlus",
 	"Enhance": "Enhance",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Veenduge, et teie CSV-fail sisaldab 4 veergu selles järjekorras: Nimi, E-post, Parool, Roll.",
 	"Enter {{role}} message here": "Sisestage {{role}} sõnum siia",
 	"Enter a detail about yourself for your LLMs to recall": "Sisestage detail enda kohta, mida teie LLM-id saavad meenutada",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Enter Docling Server URL",
 	"Enter Document Intelligence Endpoint": "Sisestage dokumendi intelligentsuse lõpp-punkt",
 	"Enter Document Intelligence Key": "Sisestage dokumendi intelligentsuse võti",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Sisestage domeenid komadega eraldatult (nt example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Sisestage Exa API võti",
 	"Enter External Document Loader API Key": "Enter Väline Dokument Loader API Võti",
 	"Enter External Document Loader URL": "Enter Väline Dokument Loader URL",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Ekspordi vestlus (.json)",
 	"Export Chats": "Ekspordi vestlused",
 	"Export Config to JSON File": "Ekspordi seadistus JSON-failina",
+	"Export Models": "",
 	"Export Presets": "Ekspordi eelseadistused",
 	"Export Prompt Suggestions": "Ekspordi vihje soovitused",
+	"Export Prompts": "",
 	"Export to CSV": "Ekspordi CSV-na",
+	"Export Tools": "",
 	"Export Users": "Ekspordi kasutajad",
 	"External": "Väline",
 	"External Document Loader URL required.": "Välise dokumendilaadija URL on nõutav.",
@@ -864,16 +871,20 @@
 	"Import Chats": "Impordi vestlused",
 	"Import Config from JSON File": "Impordi seadistus JSON-failist",
 	"Import From Link": "Impordi lingist",
+	"Import Models": "",
 	"Import Notes": "Impordi märkmed",
 	"Import Presets": "Impordi eelseadistused",
 	"Import Prompt Suggestions": "Impordi vihje soovitused",
+	"Import Prompts": "",
 	"Import successful": "Import õnnestus",
+	"Import Tools": "",
 	"Important Update": "Oluline värskendus",
 	"In order to force OCR, performing OCR must be enabled.": "OCR-i sundimiseks peab OCR olema lubatud.",
 	"Include": "Kaasa",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Lisage `--api-auth` lipp stable-diffusion-webui käivitamisel",
 	"Include `--api` flag when running stable-diffusion-webui": "Lisage `--api` lipp stable-diffusion-webui käivitamisel",
 	"Includes SharePoint": "Sisaldab SharePointi",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Mõjutab, kui kiiresti algoritm reageerib genereeritud teksti tagasisidele. Madalam õppimiskiirus annab tulemuseks aeglasemad kohandused, samas kui kõrgem õppimiskiirus muudab algoritmi tundlikumaks.",
 	"Info": "Info",
 	"Initials": "Initsiaalid",
@@ -1066,7 +1077,6 @@
 	"New Function": "Uus funktsioon",
 	"New Knowledge": "Uued teadmised",
 	"New Model": "Uus mudel",
-	"New Note": "Uus märge",
 	"New Password": "Uus parool",
 	"New Prompt": "Uus vihje",
 	"New Temporary Chat": "",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Sisestage Hugging Face Resolve (Allalaadimise) URL",
 	"Uh-oh! There was an issue with the response.": "Oi-oi! Vastusega oli probleem.",
 	"UI": "Kasutajaliides",
+	"UI Scale": "",
 	"Unarchive All": "Eemalda kõik arhiivist",
 	"Unarchive All Archived Chats": "Eemalda kõik arhiveeritud vestlused arhiivist",
 	"Unarchive Chat": "Eemalda vestlus arhiivist",
@@ -1715,6 +1726,8 @@
 	"Voice": "Hääl",
 	"Voice Input": "Hääle sisend",
 	"Voice mode": "Hääl mode",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Hoiatus",
 	"Warning:": "Hoiatus:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Hoiatus: Selle lubamine võimaldab kasutajatel üles laadida suvalist koodi serverisse.",
