--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "تنظیمات اضافی",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "گزینه\u200cهای پیکربندی اضافی برای مارکر. این باید یک رشته JSON با جفت\u200cهای کلید-مقدار باشد. برای مثال، '{\"key\": \"value\"}'. کلیدهای پشتیبانی شده عبارتند از: disable_links، keep_pageheader_in_output، keep_pagefooter_in_output، filter_blank_pages، drop_repeated_text، layout_coverage_threshold، merge_threshold، height_tolerance، gap_threshold، image_threshold، min_line_length، level_count، default_level",
 	"Additional Parameters": "پارامترهای اضافی",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "با تنظیم این تنظیمات، تغییرات به طور کلی برای همه کاربران اعمال می\u200cشود.",
 	"admin": "مدیر",
 	"Admin": "مدیر",
@@ -130,6 +131,7 @@
 	"API Key created.": "کلید API ساخته شد.",
 	"API Key Endpoint Restrictions": "محدودیت\u200cهای نقطه پایانی کلید API",
 	"API keys": "کلیدهای API",
+	"API Keys": "",
 	"API Mode": "حالت API",
 	"API Version": "نسخه API",
 	"API Version is required": "نسخه API مورد نیاز است",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "API مارکر دیتا\u200cلب",
 	"DD/MM/YYYY": "روز/ماه/سال",
 	"December": "دسامبر",
+	"Decrease UI Scale": "",
 	"Deepgram": "دیپ\u200cگرام",
 	"Default": "پیشفرض",
 	"Default (Open AI)": "پیشفرض (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "مدل پیدائش",
 	"Embedding Model Engine": "محرک مدل پیدائش",
 	"Embedding model set to \"{{embedding_model}}\"": "مدل پیدائش را به \"{{embedding_model}}\" تنظیم کنید",
-	"Enable API Key": "فعال\u200cسازی کلید API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "فعال\u200cسازی تولید تکمیل خودکار برای پیام\u200cهای چت",
 	"Enable Code Execution": "فعال\u200cسازی اجرای کد",
 	"Enable Code Interpreter": "فعال\u200cسازی مفسر کد",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "آدرس URL نقطه پایانی",
 	"Enforce Temporary Chat": "اجبار چت موقت",
 	"Enhance": "بهبود",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "اطمینان حاصل کنید که فایل CSV شما شامل چهار ستون در این ترتیب است: نام، ایمیل، رمز عبور، نقش.",
 	"Enter {{role}} message here": "پیام {{role}} را اینجا وارد کنید",
 	"Enter a detail about yourself for your LLMs to recall": "برای ذخیره سازی اطلاعات خود، یک توضیح کوتاه درباره خود را وارد کنید",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "آدرس سرور Docling را وارد کنید",
 	"Enter Document Intelligence Endpoint": "نقطه پایانی هوش سند را وارد کنید",
 	"Enter Document Intelligence Key": "کلید هوش سند را وارد کنید",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "دامنه\u200cها را با کاما جدا کنید (مثال: example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "کلید API اکسا را وارد کنید",
 	"Enter External Document Loader API Key": "کلید API بارگذار سند خارجی را وارد کنید",
 	"Enter External Document Loader URL": "آدرس URL بارگذار سند خارجی را وارد کنید",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "خروجی گرفتن گفتگو (json)",
 	"Export Chats": "خروجی گرفتن گفتگوها",
 	"Export Config to JSON File": "برون\u200cریزی پیکربندی به پروندهٔ JSON",
+	"Export Models": "",
 	"Export Presets": "برون\u200cریزی پیش\u200cتنظیم\u200cها",
 	"Export Prompt Suggestions": "خروجی گرفتن از پیشنهادات پرامپت",
+	"Export Prompts": "",
 	"Export to CSV": "برون\u200cریزی به CSV",
+	"Export Tools": "",
 	"Export Users": "خروجی گرفتن از کاربران",
 	"External": "خارجی",
 	"External Document Loader URL required.": "آدرس URL بارگذار سند خارجی مورد نیاز است.",
@@ -864,16 +871,20 @@
 	"Import Chats": "درون\u200cریزی گفتگوها",
 	"Import Config from JSON File": "درون\u200cریزی از پروندهٔ JSON",
 	"Import From Link": "وارد کردن از لینک",
+	"Import Models": "",
 	"Import Notes": "وارد کردن یادداشت\u200cها",
 	"Import Presets": "درون\u200cریزی پیش\u200cتنظیم\u200cها",
 	"Import Prompt Suggestions": "وارد کردن پیشنهادات پرامپت",
+	"Import Prompts": "",
 	"Import successful": "وارد کردن با موفقیت انجام شد",
+	"Import Tools": "",
 	"Important Update": "به\u200cروزرسانی مهم",
 	"In order to force OCR, performing OCR must be enabled.": "برای اجبار به OCR، انجام OCR باید فعال باشد.",
 	"Include": "شامل",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "هنگام اجرای stable-diffusion-webui پرچم `--api-auth` را اضافه کنید",
 	"Include `--api` flag when running stable-diffusion-webui": "فلگ `--api` را هنکام اجرای stable-diffusion-webui استفاده کنید.",
 	"Includes SharePoint": "شامل SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "تأثیر می\u200cگذارد که الگوریتم چقدر سریع به بازخورد متن تولید شده پاسخ می\u200cدهد. نرخ یادگیری پایین\u200cتر منجر به تنظیمات کندتر می\u200cشود، در حالی که نرخ یادگیری بالاتر الگوریتم را پاسخگوتر می\u200cکند.",
 	"Info": "اطلاعات",
 	"Initials": "حروف اول",
@@ -1066,7 +1077,6 @@
 	"New Function": "تابع جدید",
 	"New Knowledge": "دانش جدید",
 	"New Model": "مدل جدید",
-	"New Note": "یادداشت جدید",
 	"New Password": "رمز عبور جدید",
 	"New Prompt": "پرامپت جدید",
 	"New Temporary Chat": "چت موقت جدید",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "مقدار URL دانلود (Resolve) Hugging Face را وارد کنید",
 	"Uh-oh! There was an issue with the response.": "اوه! مشکلی در پاسخ وجود داشت.",
 	"UI": "رابط کاربری",
+	"UI Scale": "",
 	"Unarchive All": "خارج کردن همه از آرشیو",
 	"Unarchive All Archived Chats": "خارج کردن همه چت\u200cهای آرشیو شده از آرشیو",
 	"Unarchive Chat": "خارج کردن چت از آرشیو",
@@ -1715,6 +1726,8 @@
 	"Voice": "صوت",
 	"Voice Input": "ورودی صوتی",
 	"Voice mode": "حالت صوتی",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "هشدار",
 	"Warning:": "هشدار",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "هشدار: فعال کردن این گزینه به کاربران اجازه می\u200cدهد کد دلخواه را روی سرور آپلود کنند.",
