--- a/src/lib/i18n/locales/fr-CA/translation.json
+++ b/src/lib/i18n/locales/fr-CA/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "L'ajustement de ces réglages appliquera universellement les changements à tous les utilisateurs.",
 	"admin": "administrateur",
 	"Admin": "Administrateur",
@@ -130,6 +131,7 @@
 	"API Key created.": "Clé d'API générée.",
 	"API Key Endpoint Restrictions": "Restrictions des points de terminaison de la clé API",
 	"API keys": "Clés d'API",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "Version de l'API",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "API Datalab Marker",
 	"DD/MM/YYYY": "",
 	"December": "Décembre",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Par défaut",
 	"Default (Open AI)": "Par défaut (OpenAI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Modèle d'embedding",
 	"Embedding Model Engine": "Moteur de modèle d'embedding",
 	"Embedding model set to \"{{embedding_model}}\"": "Modèle d'embedding défini sur « {{embedding_model}} »",
-	"Enable API Key": "Activer la clé API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Activer la génération des suggestions pour les messages",
 	"Enable Code Execution": "Autoriser l'execution de code",
 	"Enable Code Interpreter": "Autoriser l'interprétation de code",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "URL du point de terminaison",
 	"Enforce Temporary Chat": "Imposer les discussions temporaires",
 	"Enhance": "Améliore",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Vérifiez que votre fichier CSV comprenne les 4 colonnes dans cet ordre : Name, Email, Password, Role.",
 	"Enter {{role}} message here": "Entrez le message {{role}} ici",
 	"Enter a detail about yourself for your LLMs to recall": "Saisissez un détail sur vous-même que vos LLMs pourront se rappeler",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Entrez l'url du serveur Docling",
 	"Enter Document Intelligence Endpoint": "Entrez le point d'extension d'Intelligence documentaire",
 	"Enter Document Intelligence Key": "Entrez la clé du sevice d'Intelligence documentaire",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Entrez les domaines séparés par des virgules (par ex. example.com, site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Entrez la clé d'api de Exa",
 	"Enter External Document Loader API Key": "Entrez la clé API du chargeur de documents externe",
 	"Enter External Document Loader URL": "Entrez l'URL du chargeur de documents externe",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Exporter la conversation (.json)",
 	"Export Chats": "Exporter les conversations",
 	"Export Config to JSON File": "Exporter la configuration vers un fichier JSON",
+	"Export Models": "",
 	"Export Presets": "Exporter les préréglages",
 	"Export Prompt Suggestions": "Exporter les suggestions de prompt",
+	"Export Prompts": "",
 	"Export to CSV": "Exporter en CSV",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "Externe",
 	"External Document Loader URL required.": "URL du chargeur de document externe requis",
@@ -864,16 +871,20 @@
 	"Import Chats": "Importer les conversations",
 	"Import Config from JSON File": "Importer la configuration depuis un fichier JSON",
 	"Import From Link": "Importer depuis le lien",
+	"Import Models": "",
 	"Import Notes": "Importer des notes",
 	"Import Presets": "Importer les préréglages",
 	"Import Prompt Suggestions": "Importer des suggestions de prompt",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Mise à jour importante",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Inclure",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Inclure le drapeau `--api-auth` lors de l'exécution de stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Inclure le drapeau `--api` lorsque vous exécutez stable-diffusion-webui",
 	"Includes SharePoint": "Inclut SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Influe sur la rapidité avec laquelle l'algorithme répond aux retours d'information du texte généré. Un taux d'apprentissage plus bas entraînera des ajustements plus lents, tandis qu'un taux d'apprentissage plus élevé rendra l'algorithme plus réactif.",
 	"Info": "Info",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "Nouvelle fonction",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "Nouvelle note",
 	"New Password": "Nouveau mot de passe",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1643,6 +1653,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Entrez l'URL de Téléchargement Hugging Face Resolve",
 	"Uh-oh! There was an issue with the response.": "Oh! Un problème est survenu avec la réponse.",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "Désarchiver tout",
 	"Unarchive All Archived Chats": "Désarchiver toutes les conversations archivées",
 	"Unarchive Chat": "Désarchiver la conversation",
@@ -1716,6 +1727,8 @@
 	"Voice": "Voix",
 	"Voice Input": "Saisie vocale",
 	"Voice mode": "Mode vocal",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Avertissement",
 	"Warning:": "Avertissement :",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Avertissement : Activer cette option permettra aux utilisateurs de télécharger du code arbitraire sur le serveur.",
