--- a/src/lib/i18n/locales/gl-ES/translation.json
+++ b/src/lib/i18n/locales/gl-ES/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Axustar estas opcions aplicará os cambios universalmente a todos os usuarios.",
 	"admin": "admin",
 	"Admin": "Admin",
@@ -130,6 +131,7 @@
 	"API Key created.": "Chave da API creada.",
 	"API Key Endpoint Restrictions": "Restriccions de Endpoint de Chave de API",
 	"API keys": "Chaves da API",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "Decembro",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Por defecto",
 	"Default (Open AI)": "Predeterminado (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Modelo de Embedding",
 	"Embedding Model Engine": "Motor de Modelo de Embedding",
 	"Embedding model set to \"{{embedding_model}}\"": "Modelo de Embedding configurado a \"{{embedding_model}}\"",
-	"Enable API Key": "Habilitar chave de API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Habilitar xeneración de autocompletado para mensaxes de chat",
 	"Enable Code Execution": "Habilitar a execución de código",
 	"Enable Code Interpreter": "Habilitar o interprete de código",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "asegurese de o teu arquivo CSV inclúe 4 columnas nesta orde: Nome, Email, Contrasinal, Rol.",
 	"Enter {{role}} message here": "Ingrese o mensaxe {{role}} aquí",
 	"Enter a detail about yourself for your LLMs to recall": "Ingrese un detalle sobre vostede para que as suas LLMs recorden",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "Ingrese o punto final de Intelixencia de Documentos",
 	"Enter Document Intelligence Key": "Ingrese a chave de Intelixencia de Documentos",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Ingrese dominios separados por comas (p.ej., example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Ingrese a chave API de Exa",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Exportar chat (.json)",
 	"Export Chats": "Exportar Chats",
 	"Export Config to JSON File": "Exportar configuración a Arquivo JSON",
+	"Export Models": "",
 	"Export Presets": "Exportar ajustes preestablecidos",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "Exportar a CSV",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "Importar chats",
 	"Import Config from JSON File": "Importar configuración desde Arquivo JSON",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "Importar ajustes preestablecidos",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Actualización importante",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Incluir",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Incluir o indicador `--api-auth` al ejecutar stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Incluir o indicador `--api` al ejecutar stable-diffusion-webui",
 	"Includes SharePoint": "Inclúe SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "",
 	"Info": "Información",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "",
 	"New Password": "Novo contrasinal ",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Escriba la URL (Descarga) de Hugging Face Resolve",
 	"Uh-oh! There was an issue with the response.": "¡Ups! Hubo un problema con la respuesta.",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "Desarquivar todo",
 	"Unarchive All Archived Chats": "Desarquivar todos os chats arquivados",
 	"Unarchive Chat": "Desarquivar chat",
@@ -1715,6 +1726,8 @@
 	"Voice": "Voz",
 	"Voice Input": "Entrada de voz",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Advertencia",
 	"Warning:": "Advertencia:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Advertencia: Habilitar esto permitirá a os usuarios subir código arbitrario no servidor.",
