--- a/src/lib/i18n/locales/ie-GA/translation.json
+++ b/src/lib/i18n/locales/ie-GA/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "Cumraíocht Bhreise",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "Roghanna cumraíochta breise don mharcóir. Ba chóir gur teaghrán JSON é seo le péirí eochrach-luachanna. Mar shampla, '{\"key\": \"value\"}'. I measc na n-eochracha a dtacaítear leo tá: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level",
 	"Additional Parameters": "Paraiméadair Bhreise",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Cuirfear na socruithe seo ag coigeartú athruithe go huilíoch ar gach úsáideoir.",
 	"admin": "riarachán",
 	"Admin": "Riarachán",
@@ -130,6 +131,7 @@
 	"API Key created.": "Cruthaíodh Eochair API.",
 	"API Key Endpoint Restrictions": "Príomhshrianta Críochphointe API",
 	"API keys": "Eochracha API",
+	"API Keys": "",
 	"API Mode": "Mód API",
 	"API Version": "Leagan API",
 	"API Version is required": "Tá Leagan API ag teastáil",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "API Marcóra Datalab",
 	"DD/MM/YYYY": "LL/MM/LLLL",
 	"December": "Nollaig",
+	"Decrease UI Scale": "",
 	"Deepgram": "Deepgram",
 	"Default": "Réamhshocraithe",
 	"Default (Open AI)": "Réamhshocraithe (Oscail AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Samhail Leabháilte",
 	"Embedding Model Engine": "Inneall Samhail Leabaithe",
 	"Embedding model set to \"{{embedding_model}}\"": "Socraíodh an tsamhail leabaithe go \"{{embedding_model}}\"",
-	"Enable API Key": "Cumasaigh Eochair API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Cumasaigh giniúint uathchríochnaithe le haghaidh teachtaireachtaí comhrá",
 	"Enable Code Execution": "Cumasaigh Forghníomhú Cód",
 	"Enable Code Interpreter": "Cumasaigh Ateangaire Cóid",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "URL críochphointe",
 	"Enforce Temporary Chat": "Cuir Comhrá Sealadach i bhfeidhm",
 	"Enhance": "Feabhsaigh",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Déan cinnte go bhfuil 4 cholún san ord seo i do chomhad CSV: Ainm, Ríomhphost, Pasfhocal, Ról.",
 	"Enter {{role}} message here": "Cuir isteach teachtaireacht {{role}} anseo",
 	"Enter a detail about yourself for your LLMs to recall": "Cuir isteach mionsonraí fút féin chun do LLManna a mheabhrú",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Cuir isteach URL Freastalaí Doling",
 	"Enter Document Intelligence Endpoint": "Iontráil Críochphointe Faisnéise Doiciméid",
 	"Enter Document Intelligence Key": "Iontráil Eochair Faisnéise Doiciméad",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Cuir isteach fearainn atá scartha le camóga (m.sh., example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Cuir isteach Eochair Exa API",
 	"Enter External Document Loader API Key": "Cuir isteach Eochair API Luchtaitheora Doiciméad Seachtrach",
 	"Enter External Document Loader URL": "Cuir isteach URL Luchtaitheora Doiciméad Seachtrach",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Easpórtáil comhrá (.json)",
 	"Export Chats": "Comhráite Easpórtá",
 	"Export Config to JSON File": "Easpórtáil Cumraíocht chuig Comhad JSON",
+	"Export Models": "",
 	"Export Presets": "Easpórtáil Gach Comhrá Cartlainne",
 	"Export Prompt Suggestions": "Moltaí Easpórtála",
+	"Export Prompts": "",
 	"Export to CSV": "Easpórtáil go CSV",
+	"Export Tools": "",
 	"Export Users": "Easpórtáil Úsáideoirí",
 	"External": "Seachtrach",
 	"External Document Loader URL required.": "URL Luchtaitheora Doiciméad Seachtrach ag teastáil.",
@@ -864,16 +871,20 @@
 	"Import Chats": "Comhráite iompórtá",
 	"Import Config from JSON File": "Cumraíocht Iompórtáil ó Chomhad JSON",
 	"Import From Link": "Iompórtáil Ó Nasc",
+	"Import Models": "",
 	"Import Notes": "Nótaí Iompórtála",
 	"Import Presets": "Réamhshocruithe Iompórtáil",
 	"Import Prompt Suggestions": "Moltaí Pras Iompórtála",
+	"Import Prompts": "",
 	"Import successful": "D'éirigh leis an allmhairiú",
+	"Import Tools": "",
 	"Important Update": "Nuashonrú tábhachtach",
 	"In order to force OCR, performing OCR must be enabled.": "Chun OCR a fhorchur, ní mór OCR a chumasú.",
 	"Include": "Cuir san áireamh",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Cuir bratach `--api-auth` san áireamh agus webui stable-diffusion-reatha á rith",
 	"Include `--api` flag when running stable-diffusion-webui": "Cuir bratach `--api` san áireamh agus webui cobhsaí-scaipthe á rith",
 	"Includes SharePoint": "Áirítear SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Bíonn tionchar aige ar chomh tapa agus a fhreagraíonn an t-algartam d'aiseolas ón téacs ginte. Beidh coigeartuithe níos moille mar thoradh ar ráta foghlama níos ísle, agus déanfaidh ráta foghlama níos airde an t-algartam níos freagraí.",
 	"Info": "Eolas",
 	"Initials": "Túslitreacha",
@@ -1066,7 +1077,6 @@
 	"New Function": "Feidhm Nua",
 	"New Knowledge": "Eolas Nua",
 	"New Model": "Samhail Nua",
-	"New Note": "Nóta Nua",
 	"New Password": "Pasfhocal Nua",
 	"New Prompt": "Leid Nua",
 	"New Temporary Chat": "Comhrá Sealadach Nua",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Cineál Hugging Face Resolve (Íoslódáil) URL",
 	"Uh-oh! There was an issue with the response.": "Uh-ó! Bhí fadhb leis an bhfreagra.",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "Díchartlannaigh Uile",
 	"Unarchive All Archived Chats": "Díchartlannaigh Gach Comhrá Cartlainne",
 	"Unarchive Chat": "Comhrá a dhíchartlannú",
@@ -1715,6 +1726,8 @@
 	"Voice": "Guth",
 	"Voice Input": "Ionchur Gutha",
 	"Voice mode": "Mod Gutha",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Rabhadh",
 	"Warning:": "Rabhadh:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Rabhadh: Cuirfidh sé seo ar chumas úsáideoirí cód treallach a uaslódáil ar an bhfreastalaí.",
