--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "La modifica di queste impostazioni applicherà le modifiche universalmente a tutti gli utenti.",
 	"admin": "amministratore",
 	"Admin": "Amministratore",
@@ -130,6 +131,7 @@
 	"API Key created.": "Chiave API creata.",
 	"API Key Endpoint Restrictions": "Restrizioni Endpoint Chiave API",
 	"API keys": "Chiavi API",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "Versione API",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "Datalab Marker API",
 	"DD/MM/YYYY": "",
 	"December": "Dicembre",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Predefinito",
 	"Default (Open AI)": "Predefinito (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Modello Embedding",
 	"Embedding Model Engine": "Motore Modello di Embedding",
 	"Embedding model set to \"{{embedding_model}}\"": "Modello di embedding impostato su \"{{embedding_model}}\"",
-	"Enable API Key": "Abilita Chiave API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Abilita generazione autocompletamento per i messaggi di chat",
 	"Enable Code Execution": "Abilita Esecuzione Codice",
 	"Enable Code Interpreter": "Abilita Interprete Codice",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "URL Endpoint",
 	"Enforce Temporary Chat": "Forza Chat Temporanea",
 	"Enhance": "Migliora",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Assicurati che il tuo file CSV includa 4 colonne in questo ordine: Nome, Email, Password, Ruolo.",
 	"Enter {{role}} message here": "Inserisci il messaggio per {{role}} qui",
 	"Enter a detail about yourself for your LLMs to recall": "Inserisci un dettaglio su di te per che i LLM possano ricordare",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Inserisci URL del Server Docling",
 	"Enter Document Intelligence Endpoint": "Inserisci Endpoint di Document Intelligence",
 	"Enter Document Intelligence Key": "Inserisci Chiave di Document Intelligence",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Inserisci i domini separati da virgole (ad es., example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Inserisci Chiave API Exa",
 	"Enter External Document Loader API Key": "Inserisci Chiave API del Caricatore Documenti Esterno",
 	"Enter External Document Loader URL": "Inserisci URL del Caricatore Documenti Esterno",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Esporta chat (.json)",
 	"Export Chats": "Esporta Chat",
 	"Export Config to JSON File": "Esporta Configurazione in file JSON",
+	"Export Models": "",
 	"Export Presets": "Esporta Preset",
 	"Export Prompt Suggestions": "Esporta i suggerimenti per il prompt",
+	"Export Prompts": "",
 	"Export to CSV": "Esporta in CSV",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "Esterno",
 	"External Document Loader URL required.": "URL esterna per il Document Loader necessaria.",
@@ -864,16 +871,20 @@
 	"Import Chats": "Importa Chat",
 	"Import Config from JSON File": "Importa Configurazione da File JSON",
 	"Import From Link": "Importa dai link",
+	"Import Models": "",
 	"Import Notes": "Importa Note",
 	"Import Presets": "Importa Preset",
 	"Import Prompt Suggestions": "Importa suggerimenti Prompt",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Aggiornamento importante",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Includi",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Includi il flag `--api-auth` quando esegui stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Includi il flag `--api` quando esegui stable-diffusion-webui",
 	"Includes SharePoint": "Include SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Influenza la velocità con cui l'algoritmo risponde al feedback del testo generato. Un tasso di apprendimento più basso comporterà aggiustamenti più lenti, mentre un tasso di apprendimento più alto renderà l'algoritmo più reattivo.",
 	"Info": "Informazioni",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "Nuova nota",
 	"New Password": "Nuova password",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1643,6 +1653,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Digita URL di Risoluzione (Download) di Hugging Face",
 	"Uh-oh! There was an issue with the response.": "Oh-oh! C'è stato un problema con la risposta.",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "Disarchivia Tutto",
 	"Unarchive All Archived Chats": "Disarchivia Tutte le Chat Archiviate",
 	"Unarchive Chat": "Disarchivia Chat",
@@ -1716,6 +1727,8 @@
 	"Voice": "Voce",
 	"Voice Input": "Input vocale",
 	"Voice mode": "Modalità vocale",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Attenzione",
 	"Warning:": "Attenzione:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Attenzione: abilitando questo, gli utenti potranno caricare codice arbitrario sul server.",
