--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "追加設定",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "markerの追加設定オプション。これはキーと値のペアを含むJSON文字列である必要があります(例: '{\"key\": \"value\"}')。次のキーに対応しています: disable_links、keep_pageheader_in_output、keep_pagefooter_in_output、filter_blank_pages、drop_repeated_text、layout_coverage_threshold、merge_threshold、height_tolerance、gap_threshold、image_threshold、min_line_length、level_count、default_level",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "これらの設定を変更すると、すべてのユーザーに変更が適用されます。",
 	"admin": "管理者",
 	"Admin": "管理者",
@@ -130,6 +131,7 @@
 	"API Key created.": "API キーが作成されました。",
 	"API Key Endpoint Restrictions": "API キーのエンドポイント制限",
 	"API keys": "API キー",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "API バージョン",
 	"API Version is required": "API バージョンが必要です",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "YYYY/MM/DD",
 	"December": "12月",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "デフォルト",
 	"Default (Open AI)": "デフォルト(OpenAI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "埋め込みモデル",
 	"Embedding Model Engine": "埋め込みモデルエンジン",
 	"Embedding model set to \"{{embedding_model}}\"": "埋め込みモデルを\"{{embedding_model}}\"に設定しました",
-	"Enable API Key": "APIキーを有効にする",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "チャットメッセージの自動補完を有効にする",
 	"Enable Code Execution": "コードの実行を有効にする",
 	"Enable Code Interpreter": "コードインタプリタを有効にする",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "エンドポイントURL",
 	"Enforce Temporary Chat": "一時的なチャットを強制する",
 	"Enhance": "改善する",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "CSVファイルには、次の4つの列をこの順番で含めてください: Name, Email, Password, Role。",
 	"Enter {{role}} message here": "{{role}} メッセージをここに入力してください",
 	"Enter a detail about yourself for your LLMs to recall": "LLM が参照できるように、あなたに関する情報を入力してください",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Docling Server URLを入力",
 	"Enter Document Intelligence Endpoint": "Document Intelligenceエンドポイントを入力",
 	"Enter Document Intelligence Key": "Document Intelligenceキーを入力",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "カンマ区切りのドメインを入力 (例: example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Exa APIキーを入力",
 	"Enter External Document Loader API Key": "外部ドキュメントローダーのAPIキーを入力",
 	"Enter External Document Loader URL": "外部ドキュメントローダーのURLを入力",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "チャットをエクスポート(.json)",
 	"Export Chats": "チャットをエクスポート",
 	"Export Config to JSON File": "設定をJSONファイルでエクスポート",
+	"Export Models": "",
 	"Export Presets": "プリセットのエクスポート",
 	"Export Prompt Suggestions": "プロンプトの提案をエクスポート",
+	"Export Prompts": "",
 	"Export to CSV": "CSVにエクスポート",
+	"Export Tools": "",
 	"Export Users": "ユーザのエクスポート",
 	"External": "外部",
 	"External Document Loader URL required.": "外部ドキュメントローダーのURLが必要です。",
@@ -864,16 +871,20 @@
 	"Import Chats": "チャットをインポート",
 	"Import Config from JSON File": "設定をJSONファイルからインポート",
 	"Import From Link": "リンクからインポート",
+	"Import Models": "",
 	"Import Notes": "ノートをインポート",
 	"Import Presets": "プリセットをインポート",
 	"Import Prompt Suggestions": "プロンプトの提案をインポート",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "重要な更新",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "含める",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "stable-diffusion-webuiを実行する際に`--api-auth`フラグを含めてください",
 	"Include `--api` flag when running stable-diffusion-webui": "stable-diffusion-webuiを実行する際に`--api`フラグを含めてください",
 	"Includes SharePoint": "SharePoint を含む",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "生成されたテキストからのフィードバックに対するアルゴリズムの応答速度を影響します。低い学習率はより遅い調整をもたらし、高い学習率はアルゴリズムをより反応的にします。",
 	"Info": "情報",
 	"Initials": "イニシャル",
@@ -1066,7 +1077,6 @@
 	"New Function": "新しいFunction",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "新しいノート",
 	"New Password": "新しいパスワード",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1641,6 +1651,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Hugging Face Resolve (ダウンロード) URL を入力してください",
 	"Uh-oh! There was an issue with the response.": "レスポンスに問題がありました。",
 	"UI": "",
+	"UI Scale": "",
 	"Unarchive All": "すべてアーカイブ解除",
 	"Unarchive All Archived Chats": "すべてのアーカイブされたチャットをアーカイブ解除",
 	"Unarchive Chat": "チャットをアーカイブ解除",
@@ -1714,6 +1725,8 @@
 	"Voice": "ボイス",
 	"Voice Input": "音声入力",
 	"Voice mode": "音声モード",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "警告",
 	"Warning:": "警告:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "警告: これを有効にすると、ユーザーがサーバー上で任意のコードをアップロードできるようになります。",
