--- a/src/lib/i18n/locales/ka-GE/translation.json
+++ b/src/lib/i18n/locales/ka-GE/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "დამატებითი კონფიგურაცია",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "დამატებითი პარამეტრები",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "ამ პარამეტრების რეგულირება ცვლილებებს უნივერსალურად გამოიყენებს ყველა მომხმარებლისთვის.",
 	"admin": "ადმინისტრატორი",
 	"Admin": "ადმინი",
@@ -130,6 +131,7 @@
 	"API Key created.": "API გასაღები შეიქმნა.",
 	"API Key Endpoint Restrictions": "",
 	"API keys": "API გასაღებები",
+	"API Keys": "",
 	"API Mode": "API-ის რეჟიმი",
 	"API Version": "API-ის ვერსია",
 	"API Version is required": "API-ის ვერსია აუცილებელია",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "Datalab Marker-ის API",
 	"DD/MM/YYYY": "დდ/თთ/წწწწ",
 	"December": "დეკემბერი",
+	"Decrease UI Scale": "",
 	"Deepgram": "Deepgram",
 	"Default": "ნაგულისხმევი",
 	"Default (Open AI)": "ნაგულისხმევი (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "მოდელის ჩაშენება",
 	"Embedding Model Engine": "ჩაშენებული მოდელის ძრავა",
 	"Embedding model set to \"{{embedding_model}}\"": "ჩაშენებული მოდელი დაყენებულია მნიშვნელობაზე \"{{embedding_model}}\"",
-	"Enable API Key": "API გასაღების ჩართვა",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "",
 	"Enable Code Execution": "კოდის შესრულების ჩართვა",
 	"Enable Code Interpreter": "კოდის ინტერპრეტატორის ჩართვა",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "ბოლოწერტილის URL",
 	"Enforce Temporary Chat": "ნაძალადევი დროებითი ჩატი",
 	"Enhance": "გაუმჯობესება",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "დარწმუნდით, რომ თქვენი CSV-ფაილი შეიცავს 4 ველს ამ მიმდევრობით: სახელი, ელფოსტა, პაროლი, როლი.",
 	"Enter {{role}} message here": "შეიყვანე {{role}} შეტყობინება აქ",
 	"Enter a detail about yourself for your LLMs to recall": "შეიყვანეთ რამე თქვენს შესახებ, რომ თქვენმა LLM-მა გაიხსენოს",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "",
 	"Enter Document Intelligence Key": "",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "შეიყვანეთ Exa API-ის გასაღები",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "",
 	"Export Chats": "ჩატების გატანა",
 	"Export Config to JSON File": "",
+	"Export Models": "",
 	"Export Presets": "პრესეტების გატანა",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "CVS-ში გატანა",
+	"Export Tools": "",
 	"Export Users": "მომხმარებლების გატანა",
 	"External": "გარე",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "ჩატების შემოტანა",
 	"Import Config from JSON File": "",
 	"Import From Link": "შემოტანა ბმულიდან",
+	"Import Models": "",
 	"Import Notes": "შენიშვნების შემოტანა",
 	"Import Presets": "პრესეტების შემოტანა",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "შემოტანა წარმატებულია",
+	"Import Tools": "",
 	"Important Update": "მნიშვნელოვანი განახლება",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "ჩართვა",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "",
 	"Include `--api` flag when running stable-diffusion-webui": "`--api` ალმის ჩასმა stable-diffusion-webui-ის გამოყენებისას",
 	"Includes SharePoint": "შეიცავს SharePoint-ს",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "",
 	"Info": "ინფორმაცია",
 	"Initials": "ინიციალები",
@@ -1066,7 +1077,6 @@
 	"New Function": "ახალი ფუნქცია",
 	"New Knowledge": "ახალი ცოდნა",
 	"New Model": "ახალი მოდელი",
-	"New Note": "ახალი ჩანაწერი",
 	"New Password": "ახალი პაროლი",
 	"New Prompt": "ახალი შეყვანა",
 	"New Temporary Chat": "",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "აკრიფეთ HuggingFace-ის ამოხსნის (გადმოწერის) URL",
 	"Uh-oh! There was an issue with the response.": "",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "ყველაფერის ამოარქივება",
 	"Unarchive All Archived Chats": "ყველა დაარქივებული ჩატის ამოარქივება",
 	"Unarchive Chat": "ჩატის ამოარქივება",
@@ -1715,6 +1726,8 @@
 	"Voice": "ხმა",
 	"Voice Input": "ხმოვანი შეყვანა",
 	"Voice mode": "ხმის რეჟიმი",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "გაფრთხილება",
 	"Warning:": "გაფრთხილება:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "",
