--- a/src/lib/i18n/locales/kab-DZ/translation.json
+++ b/src/lib/i18n/locales/kab-DZ/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "Tawila tamernant",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "Iɣewwaren nniḍen",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Aswati n yiɣewwaren-a ad yessuter ibeddilen s wudem ameɣradan i yiseqdacen akk.",
 	"admin": "anedbal",
 	"Admin": "Anebdal",
@@ -130,6 +131,7 @@
 	"API Key created.": "Tasarut API tennulfa-d.",
 	"API Key Endpoint Restrictions": "Agaz n ugaz n tsarut API",
 	"API keys": "Tisura API",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "Lqem n API",
 	"API Version is required": "Lqem n API yettwasra",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "API n Datalab Marker",
 	"DD/MM/YYYY": "JJ/MM/AAAA",
 	"December": "Duǧambeṛ",
+	"Decrease UI Scale": "",
 	"Deepgram": "Deepgram",
 	"Default": "Amezwer",
 	"Default (Open AI)": "Amezwer (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Tamudemt n ujmak",
 	"Embedding Model Engine": "Amsedday n tmudemt n ujmak",
 	"Embedding model set to \"{{embedding_model}}\"": "Tettusbadu tmudemt n ujmak ɣef \"{{embedding_model}}\"\"",
-	"Enable API Key": "Rmed tasarut API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Rmed tasuta tawurmant tummidt i udiwenni iznan",
 	"Enable Code Execution": "Rmed aselkem n tengalt",
 	"Enable Code Interpreter": "Rmed asegzay n tengalt",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "URL n wagaz n uzgu",
 	"Enforce Temporary Chat": "Ḥettem idiwenniyen iskudanen",
 	"Enhance": "Yesnernay",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Ssefqed afaylu-inek CSV deg-s 4 n tgejda deg uswir-a: Isem, Email, awal uffir, Role.",
 	"Enter {{role}} message here": "Sekcem izen n {{role}} dagi",
 	"Enter a detail about yourself for your LLMs to recall": "Ssekcem-d ttfaṣil ɣef yiman-nnek akken ad d-temmektid LLMs-nnek akken ad d-temmektid",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Sekcem tansa URL n uqeddac",
 	"Enter Document Intelligence Endpoint": "Sekcem agaz n tagara n yisemli",
 	"Enter Document Intelligence Key": "Kcem ɣer tsarut n wulli",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Sekcem taɣulin yebḍan s tefrayin (amedya: example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Kcem ɣer Exa Tasarut",
 	"Enter External Document Loader API Key": "Sekcem-d tasarut API n usezdam n isemliyen yeffɣen",
 	"Enter External Document Loader URL": "Sekcem tansa URL n ukaram n isemli imeṛṛa",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Kter asqerdec (.json)",
 	"Export Chats": "Sifeḍ idiwenniyen",
 	"Export Config to JSON File": "Sifeḍ asesteb ɣer ufaylu JSON",
+	"Export Models": "",
 	"Export Presets": "Sifeḍ isestab uzwiren",
 	"Export Prompt Suggestions": "Sifeḍ isumar n uneftaɣ",
+	"Export Prompts": "",
 	"Export to CSV": "Kter ɣer CSV",
+	"Export Tools": "",
 	"Export Users": "Sifeḍ iseqdacen",
 	"External": "Azɣaray",
 	"External Document Loader URL required.": "URL n uslay n yisemli azɣaray, yettwasra.",
@@ -864,16 +871,20 @@
 	"Import Chats": "Asifeḍ n yidiwenniyen",
 	"Import Config from JSON File": "Kter-d Config seg ufaylu JSON",
 	"Import From Link": "Kter seg useɣwen",
+	"Import Models": "",
 	"Import Notes": "Kter tizmilin",
 	"Import Presets": "Kter iɣewwaren uzwiren",
 	"Import Prompt Suggestions": "Kter isumar n uneftaɣ",
+	"Import Prompts": "",
 	"Import successful": "Taktert tella-d akken iwata",
+	"Import Tools": "",
 	"Important Update": "Aleqqem ahemmu",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Seddu",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Seddu annay `--api-auth` lawan n uselkem n stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Seddu takbabt ''-api' mi ara teslekmeḍ stable-diffusion-webui",
 	"Includes SharePoint": "Igber SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "",
 	"Info": "Talɣut",
 	"Initials": "Isekkilen imezwura",
@@ -1066,7 +1077,6 @@
 	"New Function": "Tasɣent tamaynut",
 	"New Knowledge": "",
 	"New Model": "Tamudemt tamaynut",
-	"New Note": "Tazmilt tamaynut",
 	"New Password": "Awal n uɛeddi amaynut",
 	"New Prompt": "Aneftaɣ amaynut",
 	"New Temporary Chat": "",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Anaw n usefres n wudem amezwer (Download) URL",
 	"Uh-oh! There was an issue with the response.": "Uh! Tella-d tuccḍa akked tririt-nni.",
 	"UI": "Agrudem n useqdac",
+	"UI Scale": "",
 	"Unarchive All": "",
 	"Unarchive All Archived Chats": "",
 	"Unarchive Chat": "",
@@ -1715,6 +1726,8 @@
 	"Voice": "Taɣect",
 	"Voice Input": "Anekcam s taɣect",
 	"Voice mode": "Askar n taɣect",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Ɣur-k",
 	"Warning:": "Alɣu:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Ɣur-k: Asewḥel n waya ad yeǧǧ iseqdacen ad d-salin tangalt tazurant ɣef uqeddac.",
