--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "추가 설정",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "Marker에 대한 추가 설정 옵션입니다. 키-값 쌍으로 이루어진 JSON 문자열이어야 합니다. 예를 들어, '{\"key\": \"value\"}'와 같습니다. 지원되는 키는 다음과 같습니다: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level",
 	"Additional Parameters": "추가 매개변수",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "이 설정을 조정하면 모든 사용자에게 변경 사항이 일괄 적용됩니다.",
 	"admin": "관리자",
 	"Admin": "관리자",
@@ -130,6 +131,7 @@
 	"API Key created.": "API 키가 생성되었습니다.",
 	"API Key Endpoint Restrictions": "API 키 엔드포인트 제한",
 	"API keys": "API 키",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "API 버전",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "Datalab Marker API",
 	"DD/MM/YYYY": "YYYY/MM/DD",
 	"December": "12월",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "기본값",
 	"Default (Open AI)": "기본값 (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "임베딩 모델",
 	"Embedding Model Engine": "임베딩 모델 엔진",
 	"Embedding model set to \"{{embedding_model}}\"": "임베딩 모델을 \"{{embedding_model}}\"로 설정함",
-	"Enable API Key": "API 키 활성화",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "채팅 메시지에 대한 자동 완성 생성 활성화",
 	"Enable Code Execution": "코드 실행 활성화",
 	"Enable Code Interpreter": "코드 인터프리터 활성화",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "엔드포인트 URL",
 	"Enforce Temporary Chat": "임시 채팅 강제 적용",
 	"Enhance": "향상",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "CSV 파일에 이름, 이메일, 비밀번호, 역할 4개의 열이 순서대로 포함되어 있는지 확인하세요.",
 	"Enter {{role}} message here": "여기에 {{role}} 메시지 입력",
 	"Enter a detail about yourself for your LLMs to recall": "자신에 대한 세부사항을 입력하여 LLM들이 기억할 수 있도록 하세요.",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Docling 서버 URL 입력",
 	"Enter Document Intelligence Endpoint": "Document Intelligence 엔드포인트 입력",
 	"Enter Document Intelligence Key": "Document Intelligence 키 입력",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "쉼표로 구분된 도메인 입력 (예: example.com, site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Exa API 키 입력",
 	"Enter External Document Loader API Key": "외부 문서 로더 API 키 입력",
 	"Enter External Document Loader URL": "외부 문서 로더 URL 입력",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "채팅 내보내기 (.json)",
 	"Export Chats": "채팅 내보내기",
 	"Export Config to JSON File": "Config를 JSON 파일로 내보내기",
+	"Export Models": "",
 	"Export Presets": "프리셋 내보내기",
 	"Export Prompt Suggestions": "프롬프트 제안 내보내기",
+	"Export Prompts": "",
 	"Export to CSV": "CSV로 내보내기",
+	"Export Tools": "",
 	"Export Users": "사용자 정보 내보내기",
 	"External": "외부",
 	"External Document Loader URL required.": "외부 문서 로더 URL이 필요합니다.",
@@ -864,16 +871,20 @@
 	"Import Chats": "채팅 가져오기",
 	"Import Config from JSON File": "JSON 파일에서 설정 가져오기",
 	"Import From Link": "링크에서 가져오기",
+	"Import Models": "",
 	"Import Notes": "노트 가져오기",
 	"Import Presets": "프리셋 가져오기",
 	"Import Prompt Suggestions": "프롬프트 제안 가져오기",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "중요 업데이트",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "포함",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "stable-diffusion-webui를 실행 시 `--api-auth` 플래그를 포함하세요",
 	"Include `--api` flag when running stable-diffusion-webui": "stable-diffusion-webui를 실행 시 `--api` 플래그를 포함하세요",
 	"Includes SharePoint": "SharePoint 포함",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "생성된 텍스트의 피드백에 알고리즘이 얼마나 빨리 반응하는지에 영향을 미칩니다. 학습률이 낮을수록 조정 속도가 느려지고 학습률이 높아지면 알고리즘의 반응 속도가 빨라집니다.",
 	"Info": "정보",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "새 함수",
 	"New Knowledge": "새 지식 기반",
 	"New Model": "새 모델",
-	"New Note": "새 노트",
 	"New Password": "새 비밀번호",
 	"New Prompt": "새 프롬프트",
 	"New Temporary Chat": "",
@@ -1641,6 +1651,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Hugging Face Resolve (다운로드) URL 입력",
 	"Uh-oh! There was an issue with the response.": "이런! 응답에 문제가 발생했습니다.",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "모두 보관 해제",
 	"Unarchive All Archived Chats": "보관된 모든 채팅을 보관 해제",
 	"Unarchive Chat": "채팅 보관 해제",
@@ -1714,6 +1725,8 @@
 	"Voice": "음성",
 	"Voice Input": "음성 입력",
 	"Voice mode": "음성 모드 사용",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "경고",
 	"Warning:": "주의:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "주의: 이 기능을 활성화하면 사용자가 서버에 임의 코드를 업로드할 수 있습니다.",
