--- a/src/lib/i18n/locales/nb-NO/translation.json
+++ b/src/lib/i18n/locales/nb-NO/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Endring av disse innstillingene vil gjelde for alle brukere på tvers av systemet.",
 	"admin": "administrator",
 	"Admin": "Administrator",
@@ -130,6 +131,7 @@
 	"API Key created.": "API-nøkkel opprettet.",
 	"API Key Endpoint Restrictions": "Begrensninger for API-nøkkelens endepunkt",
 	"API keys": "API-nøkler",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "desember",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Standard",
 	"Default (Open AI)": "Standard (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Innbyggingsmodell",
 	"Embedding Model Engine": "Motor for innbygging av modeller",
 	"Embedding model set to \"{{embedding_model}}\"": "Innbyggingsmodell angitt til \"{{embedding_model}}\"",
-	"Enable API Key": "Aktiver ",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Aktiver automatisk utfylling av chatmeldinger",
 	"Enable Code Execution": "",
 	"Enable Code Interpreter": "Aktiver kodetolker",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Sørg for at CSV-filen din inkluderer fire kolonner i denne rekkefølgen: Navn, E-post, Passord, Rolle.",
 	"Enter {{role}} message here": "Skriv inn {{role}} melding her",
 	"Enter a detail about yourself for your LLMs to recall": "Skriv inn en detalj om deg selv som språkmodellene dine kan huske",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "Angi endepunkt for Intelligens i dokumenter",
 	"Enter Document Intelligence Key": "Angi nøkkel for Intelligens i dokumenter",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Angi domener atskilt med komma (f.eks. eksempel.com, side.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Angi API-nøkkel for Exa",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Eksporter chat (.json)",
 	"Export Chats": "Eksporter chatter",
 	"Export Config to JSON File": "Ekporter konfigurasjon til en JSON-fil",
+	"Export Models": "",
 	"Export Presets": "Eksporter forhåndsinnstillinger",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "Eksporter til CSV",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "Importer chatter",
 	"Import Config from JSON File": "Importer konfigurasjon fra en JSON-fil",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "Importer forhåndsinnstillinger",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Viktig oppdatering",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Inkluder",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Inkluder flagget --api-auth når du kjører stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Inkluder flagget --api når du kjører stable-diffusion-webui",
 	"Includes SharePoint": "Inkluderer SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "",
 	"Info": "Info",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "",
 	"New Password": "Nytt passord",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Angi nedlastings-Resolve-URL for Hugging Face",
 	"Uh-oh! There was an issue with the response.": "Oi! Det oppstod et problem med svaret.",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "Opphev arkiveringen av alle",
 	"Unarchive All Archived Chats": "Opphev arkiveringen av alle arkiverte chatter",
 	"Unarchive Chat": "Opphev arkivering av chat",
@@ -1715,6 +1726,8 @@
 	"Voice": "Stemme",
 	"Voice Input": "Taleinndata",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Advarsel",
 	"Warning:": "Advarsel!",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Advarsel: Hvis du aktiverer denne funksjonen, kan brukere laste opp vilkårlig kode på serveren.",
