--- a/src/lib/i18n/locales/nl-NL/translation.json
+++ b/src/lib/i18n/locales/nl-NL/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "Extra configuratie",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Het aanpassen van deze instellingen zal universeel worden toegepast op alle gebruikers.",
 	"admin": "beheerder",
 	"Admin": "Beheerder",
@@ -130,6 +131,7 @@
 	"API Key created.": "API-sleutel aangemaakt.",
 	"API Key Endpoint Restrictions": "API-sleutel endpoint-beperkingen",
 	"API keys": "API-sleutels",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "December",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Standaard",
 	"Default (Open AI)": "Standaard (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Embedding Model",
 	"Embedding Model Engine": "Embedding Model Engine",
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding model ingesteld op \"{{embedding_model}}\"",
-	"Enable API Key": "API-sleutel inschakelen",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Automatische aanvullingsgeneratie voor chatberichten inschakelen",
 	"Enable Code Execution": "Code-uitvoer inschakelen",
 	"Enable Code Interpreter": "Code-interpretatie inschakelen",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "Tijdelijke chat afdwingen",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Zorg ervoor dat uw CSV-bestand de volgende vier kolommen in deze volgorde bevat: Naam, E-mail, Wachtwoord, Rol.",
 	"Enter {{role}} message here": "Voeg {{role}} bericht hier toe",
 	"Enter a detail about yourself for your LLMs to recall": "Voer een detail over jezelf in zodat LLM's het kunnen onthouden",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Voer Docling Server-URL in",
 	"Enter Document Intelligence Endpoint": "Voer Document Intelligence endpoint in",
 	"Enter Document Intelligence Key": "Voer Document Intelligence sleutel in",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Voer domeinen in gescheiden met komma's (bijv., voorbeeld.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Voer Exa API-sleutel in",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Exporteer chat (.json)",
 	"Export Chats": "Exporteer chats",
 	"Export Config to JSON File": "Exporteer configuratie naar JSON-bestand",
+	"Export Models": "",
 	"Export Presets": "Exporteer voorinstellingen",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "Exporteer naar CSV",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "Extern",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "Importeer Chats",
 	"Import Config from JSON File": "Importeer configuratie vanuit JSON-bestand",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "Importeer voorinstellingen",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Belangrijke update",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Voeg toe",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Voeg '--api-auth` toe bij het uitvoeren van stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Voeg `--api` vlag toe bij het uitvoeren van stable-diffusion-webui",
 	"Includes SharePoint": "Inclusief SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Beïnvloedt hoe snel het algoritme reageert op feedback van de gegenereerde tekst. Een lagere leersnelheid resulteert in langzamere aanpassingen, terwijl een hogere leersnelheid het algoritme responsiever maakt.",
 	"Info": "Info",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "",
 	"New Password": "Nieuw Wachtwoord",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Type Hugging Face Resolve (Download) URL",
 	"Uh-oh! There was an issue with the response.": "Oh-oh! Er was een probleem met het antwoord.",
 	"UI": "UI",
+	"UI Scale": "",
 	"Unarchive All": "Onarchiveer alles",
 	"Unarchive All Archived Chats": "Onarchiveer alle gearchiveerde chats",
 	"Unarchive Chat": "Onarchiveer chat",
@@ -1715,6 +1726,8 @@
 	"Voice": "Stem",
 	"Voice Input": "Steminvoer",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Waarschuwing",
 	"Warning:": "Waarschuwing",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Waarschuwing: Door dit in te schakelen kunnen gebruikers willekeurige code uploaden naar de server.",
