--- a/src/lib/i18n/locales/ro-RO/translation.json
+++ b/src/lib/i18n/locales/ro-RO/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Ajustarea acestor setări va aplica modificările universal pentru toți utilizatorii.",
 	"admin": "administrator",
 	"Admin": "Administrator",
@@ -130,6 +131,7 @@
 	"API Key created.": "Cheie API creată.",
 	"API Key Endpoint Restrictions": "",
 	"API keys": "Chei API",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "Decembrie",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Implicit",
 	"Default (Open AI)": "Implicit (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Model de Încapsulare",
 	"Embedding Model Engine": "Motor de Model de Încapsulare",
 	"Embedding model set to \"{{embedding_model}}\"": "Modelul de încapsulare setat la \"{{embedding_model}}\"",
-	"Enable API Key": "Activează cheia API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Activează generarea automată pentru mesajele de chat",
 	"Enable Code Execution": "",
 	"Enable Code Interpreter": "Activează interpretul de cod",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Asigurați-vă că fișierul CSV include 4 coloane în această ordine: Nume, Email, Parolă, Rol.",
 	"Enter {{role}} message here": "Introduceți mesajul pentru {{role}} aici",
 	"Enter a detail about yourself for your LLMs to recall": "Introduceți un detaliu despre dvs. pe care LLM-urile să-l rețină",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "",
 	"Enter Document Intelligence Key": "",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Exportă conversația (.json)",
 	"Export Chats": "Exportă Conversațiile",
 	"Export Config to JSON File": "Exportă Configurația în Fișier JSON",
+	"Export Models": "",
 	"Export Presets": "",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "Importă Conversațiile",
 	"Import Config from JSON File": "Importarea configurației dintr-un fișier JSON",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Actualizare importantă",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Include",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Includeți flag-ul `--api-auth` când rulați stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Includeți flag-ul `--api` când rulați stable-diffusion-webui",
 	"Includes SharePoint": "Include SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "",
 	"Info": "Informații",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "",
 	"New Password": "Parolă Nouă",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1643,6 +1653,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Introduceți URL-ul de Rezolvare (Descărcare) Hugging Face",
 	"Uh-oh! There was an issue with the response.": "Oh, nu! A apărut o problemă cu răspunsul.",
 	"UI": "Interfață Utilizator",
+	"UI Scale": "",
 	"Unarchive All": "Dezarhivează tot",
 	"Unarchive All Archived Chats": "Dezarhivează toate conversațiile arhivate",
 	"Unarchive Chat": "Dezarhivează conversația",
@@ -1716,6 +1727,8 @@
 	"Voice": "Voce",
 	"Voice Input": "Intrare vocală",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Avertisment",
 	"Warning:": "Avertisment:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "",
