--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "Дополнительные настройки",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "Дополнительные настройки для marker. Это должна быть строка JSON с ключами и значениями. Например, '{\"key\": \"value\"}'. Поддерживаемые ключи включают: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Изменения в этих настройках будут применены для всех пользователей.",
 	"admin": "админ",
 	"Admin": "Админ",
@@ -130,6 +131,7 @@
 	"API Key created.": "Ключ API создан.",
 	"API Key Endpoint Restrictions": "Ограничения на энд-поинт API",
 	"API keys": "Ключи API",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "Версия API",
 	"API Version is required": "Обязательна версия API",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "Datalab Marker API",
 	"DD/MM/YYYY": "ДД/ММ/ГГГГ",
 	"December": "Декабрь",
+	"Decrease UI Scale": "",
 	"Deepgram": "Deepgram",
 	"Default": "По умолчанию",
 	"Default (Open AI)": "По умолчанию (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Модель встраивания",
 	"Embedding Model Engine": "Движок модели встраивания",
 	"Embedding model set to \"{{embedding_model}}\"": "Модель встраивания установлена в \"{{embedding_model}}\"",
-	"Enable API Key": "Включить ключ API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Включить генерацию автозаполнения для сообщений чата",
 	"Enable Code Execution": "Включить исполнение кода",
 	"Enable Code Interpreter": "Включить интерпретатор кода",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "URL-адрес конечной точки",
 	"Enforce Temporary Chat": "Принудительный временный чат",
 	"Enhance": "Улучшить",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Убедитесь, что ваш CSV-файл включает в себя 4 столбца в следующем порядке: Имя, Электронная почта, Пароль, Роль.",
 	"Enter {{role}} message here": "Введите сообщение {{role}} здесь",
 	"Enter a detail about yourself for your LLMs to recall": "Введите детали о себе, чтобы LLMs могли запомнить",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Введите URL сервера Docling",
 	"Enter Document Intelligence Endpoint": "Введите энд-поинт анализа документов",
 	"Enter Document Intelligence Key": "Введите ключ для анализа документов",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Введите домены, разделенные запятыми (например, example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Введите ключ API для Exa",
 	"Enter External Document Loader API Key": "Введите ключ API внешнего загрузчика документов",
 	"Enter External Document Loader URL": "Введите URL-адрес внешнего загрузчика документов",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Экспортировать чат (.json)",
 	"Export Chats": "Экспортировать чаты",
 	"Export Config to JSON File": "Экспорт конфигурации в JSON-файл",
+	"Export Models": "",
 	"Export Presets": "Экспорт Пресетов",
 	"Export Prompt Suggestions": "Экспортировать Предложения промптов",
+	"Export Prompts": "",
 	"Export to CSV": "Экспортировать в CSV",
+	"Export Tools": "",
 	"Export Users": "Экспортировать пользователей",
 	"External": "Внешнее",
 	"External Document Loader URL required.": "Требуется URL-адрес внешнего загрузчика документов.",
@@ -864,16 +871,20 @@
 	"Import Chats": "Импортировать чаты",
 	"Import Config from JSON File": "Импорт конфигурации из JSON-файла",
 	"Import From Link": "Импортировать по ссылке",
+	"Import Models": "",
 	"Import Notes": "Импортировать Заметки",
 	"Import Presets": "Импортировать Пресеты",
 	"Import Prompt Suggestions": "Импортировать Предложения промптов",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Важное обновление",
 	"In order to force OCR, performing OCR must be enabled.": "Для принудительного OCR необходимо включить выполнение OCR.",
 	"Include": "Включать",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Добавьте флаг '--api-auth' при запуске stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Добавьте флаг `--api` при запуске stable-diffusion-webui",
 	"Includes SharePoint": "Включает SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Влияет на то, насколько быстро алгоритм реагирует на обратную связь из сгенерированного текста. Более низкая скорость обучения приведет к более медленной корректировке, в то время как более высокая скорость обучения сделает алгоритм более отзывчивым.",
 	"Info": "Информация",
 	"Initials": "Инициалы",
@@ -1066,7 +1077,6 @@
 	"New Function": "Новая функция",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "Новая заметка",
 	"New Password": "Новый пароль",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1644,6 +1654,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Введите URL-адрес Hugging Face Resolve (загрузки)",
 	"Uh-oh! There was an issue with the response.": "Печаль-беда! Возникла проблема с ответом.",
 	"UI": "Пользовательский интерфейс",
+	"UI Scale": "",
 	"Unarchive All": "Разархивировать ВСЁ",
 	"Unarchive All Archived Chats": "Разархивировать ВСЕ Заархивированные чаты",
 	"Unarchive Chat": "Разархивировать чат",
@@ -1717,6 +1728,8 @@
 	"Voice": "Голос",
 	"Voice Input": "Ввод голоса",
 	"Voice mode": "Режим голоса",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Предупреждение",
 	"Warning:": "Предупреждение:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Предупреждение. Включение этого параметра позволит пользователям загружать произвольный код на сервер.",
