--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Прилагођавање ових подешавања ће применити промене на све кориснике.",
 	"admin": "админ",
 	"Admin": "Админ",
@@ -130,6 +131,7 @@
 	"API Key created.": "API кључ направљен.",
 	"API Key Endpoint Restrictions": "",
 	"API keys": "API кључеви",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "Децембар",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Подразумевано",
 	"Default (Open AI)": "Подразумевано (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Модел уградње",
 	"Embedding Model Engine": "Мотор модела уградње",
 	"Embedding model set to \"{{embedding_model}}\"": "Модел уградње подешен на \"{{embedding_model}}\"",
-	"Enable API Key": "",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "",
 	"Enable Code Execution": "",
 	"Enable Code Interpreter": "",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Уверите се да ваша CSV датотека укључује 4 колоне у овом редоследу: Име, Е-пошта, Лозинка, Улога.",
 	"Enter {{role}} message here": "Унесите {{role}} поруку овде",
 	"Enter a detail about yourself for your LLMs to recall": "Унесите детаље за себе да ће LLMs преузимати",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "",
 	"Enter Document Intelligence Key": "",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Извези ћаскање (.json)",
 	"Export Chats": "Извези ћаскања",
 	"Export Config to JSON File": "",
+	"Export Models": "",
 	"Export Presets": "",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "Увези ћаскања",
 	"Import Config from JSON File": "",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Важно ажурирање",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "",
 	"Include `--api` flag when running stable-diffusion-webui": "Укључи `--api` заставицу при покретању stable-diffusion-webui",
 	"Includes SharePoint": "Укључује SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "",
 	"Info": "Инфо",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "",
 	"New Password": "Нова лозинка",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1643,6 +1653,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Унесите Hugging Face Resolve (Download) адресу",
 	"Uh-oh! There was an issue with the response.": "",
 	"UI": "Прочеље",
+	"UI Scale": "",
 	"Unarchive All": "Деархивирај све",
 	"Unarchive All Archived Chats": "Деархивирај све архиве",
 	"Unarchive Chat": "Деархивирај ћаскање",
@@ -1716,6 +1727,8 @@
 	"Voice": "Глас",
 	"Voice Input": "Гласовни унос",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Упозорење",
 	"Warning:": "Упозорење:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "",
