--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "การปรับการตั้งค่าเหล่านี้จะนำไปใช้กับผู้ใช้ทั้งหมด",
 	"admin": "ผู้ดูแลระบบ",
 	"Admin": "ผู้ดูแลระบบ",
@@ -130,6 +131,7 @@
 	"API Key created.": "สร้างคีย์ API แล้ว",
 	"API Key Endpoint Restrictions": "",
 	"API keys": "คีย์ API",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "ธันวาคม",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "ค่าเริ่มต้น",
 	"Default (Open AI)": "",
@@ -517,7 +520,7 @@
 	"Embedding Model": "โมเดลการฝัง",
 	"Embedding Model Engine": "เครื่องยนต์โมเดลการฝัง",
 	"Embedding model set to \"{{embedding_model}}\"": "ตั้งค่าโมเดลการฝังเป็น \"{{embedding_model}}\"",
-	"Enable API Key": "",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "",
 	"Enable Code Execution": "",
 	"Enable Code Interpreter": "",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "ตรวจสอบว่าไฟล์ CSV ของคุณมี 4 คอลัมน์ในลำดับนี้: ชื่อ, อีเมล, รหัสผ่าน, บทบาท",
 	"Enter {{role}} message here": "ใส่ข้อความ {{role}} ที่นี่",
 	"Enter a detail about yourself for your LLMs to recall": "ใส่รายละเอียดเกี่ยวกับตัวคุณสำหรับ LLMs ของคุณให้จดจำ",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "",
 	"Enter Document Intelligence Endpoint": "",
 	"Enter Document Intelligence Key": "",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "ส่งออกการสนทนา (.json)",
 	"Export Chats": "ส่งออกการสนทนา",
 	"Export Config to JSON File": "",
+	"Export Models": "",
 	"Export Presets": "",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "นำเข้าการสนทนา",
 	"Import Config from JSON File": "",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "อัปเดตสำคัญ",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "รวมแฟลก `--api-auth` เมื่อเรียกใช้ stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "รวมแฟลก `--api` เมื่อเรียกใช้ stable-diffusion-webui",
 	"Includes SharePoint": "รวม SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "",
 	"Info": "ข้อมูล",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "",
 	"New Password": "รหัสผ่านใหม่",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1641,6 +1651,7 @@
 	"Type Hugging Face Resolve (Download) URL": "พิมพ์ URL ของ Hugging Face Resolve (Download)",
 	"Uh-oh! There was an issue with the response.": "",
 	"UI": "ส่วนติดต่อผู้ใช้",
+	"UI Scale": "",
 	"Unarchive All": "",
 	"Unarchive All Archived Chats": "",
 	"Unarchive Chat": "",
@@ -1714,6 +1725,8 @@
 	"Voice": "เสียง",
 	"Voice Input": "",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "คำเตือน",
 	"Warning:": "คำเตือน:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "",
