--- a/src/lib/i18n/locales/uz-Cyrl-UZ/translation.json
+++ b/src/lib/i18n/locales/uz-Cyrl-UZ/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Ушбу созламаларни ўзгартириш барча фойдаланувчиларга универсал тарзда қўлланилади.",
 	"admin": "админ",
 	"Admin": "Админ",
@@ -130,6 +131,7 @@
 	"API Key created.": "Дастурий Илова Интерфейси(API) калити яратилди.",
 	"API Key Endpoint Restrictions": "Дастурий Илова Интерфейси(API) калитининг чекловлари",
 	"API keys": "Дастурий Илова Интерфейси(API) калитлари",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "Дастурий Илова Интерфейси(API) версияси",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "Datalab Marker API",
 	"DD/MM/YYYY": "",
 	"December": "декабр",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Стандарт",
 	"Default (Open AI)": "Стандарт (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Ўрнатиш модели",
 	"Embedding Model Engine": "Двигател моделини ўрнатиш",
 	"Embedding model set to \"{{embedding_model}}\"": "Ўрнатиш модели “{{embedding_model}}”га ўрнатилди",
-	"Enable API Key": "API калитини ёқиш",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Чат хабарлари учун автоматик тўлдиришни яратишни ёқинг",
 	"Enable Code Execution": "Код бажарилишини ёқинг",
 	"Enable Code Interpreter": "Код таржимонини ёқинг",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "Охирги нуқта URL",
 	"Enforce Temporary Chat": "Вақтинчалик суҳбатни жорий қилиш",
 	"Enhance": "Яхшилаш",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "CSV файлингиз қуйидаги тартибда 4 та устундан иборатлигига ишонч ҳосил қилинг: Исм, Электрон почта, Парол, Рол.",
 	"Enter {{role}} message here": "Бу ерга {{role}} хабарини киритинг",
 	"Enter a detail about yourself for your LLMs to recall": "ЛЛМлар эслаб қолишлари учун ўзингиз ҳақингизда маълумот киритинг",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Docling Сервер URL манзилини киритинг",
 	"Enter Document Intelligence Endpoint": "Document Intelligence Эндпоинт-ни киритинг",
 	"Enter Document Intelligence Key": "Ҳужжатнинг разведка калитини киритинг",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Доменларни вергул билан ажратинг (масалан, example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Exa АПИ калитини киритинг",
 	"Enter External Document Loader API Key": "Ташқи ҳужжат юкловчи АПИ калитини киритинг",
 	"Enter External Document Loader URL": "Ташқи ҳужжат юкловчи УРЛ манзилини киритинг",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Чатни экспорт қилиш (.жсон)",
 	"Export Chats": "Чатларни экспорт қилиш",
 	"Export Config to JSON File": "Конфигурацияни ЖСОН файлига экспорт қилинг",
+	"Export Models": "",
 	"Export Presets": "Олдиндан созламаларни экспорт қилиш",
 	"Export Prompt Suggestions": "Экспорт бўйича таклифлар",
+	"Export Prompts": "",
 	"Export to CSV": "CSV га экспорт қилиш",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "Ташқи",
 	"External Document Loader URL required.": "Ташқи ҳужжат юкловчи УРЛ манзили талаб қилинади.",
@@ -864,16 +871,20 @@
 	"Import Chats": "Чатларни импорт қилиш",
 	"Import Config from JSON File": "ЖСОН файлидан конфигурацияни импорт қилинг",
 	"Import From Link": "Ҳаволадан импорт қилиш",
+	"Import Models": "",
 	"Import Notes": "Эслатмаларни импорт қилиш",
 	"Import Presets": "Олдиндан созламаларни импорт қилиш",
 	"Import Prompt Suggestions": "Импорт бўйича таклифлар",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Мухим янгиланиш",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Ўз ичига олади",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Стабил-диффусион-wебуи ишлаётганда ъ--api-аутҳъ байроғини қўшинг",
 	"Include `--api` flag when running stable-diffusion-webui": "Стабил-диффусион-wебуи ишлатилаётганда ъ--апиъ байроғини қўшинг",
 	"Includes SharePoint": "SharePoint ни ўз ичига олади",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Алгоритм яратилган матндан олинган фикр-мулоҳазага қанчалик тез жавоб беришига таъсир қилади. Пастроқ ўрганиш тезлиги созлашнинг секинлашишига олиб келади, юқори ўрганиш тезлиги эса алгоритмни янада сезгир қилади.",
 	"Info": "Маълумот",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "Янги функсия",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "Янги эслатма",
 	"New Password": "Янги парол",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1642,6 +1652,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Hugging Face Resolve (юклаб олиш) URL манзилини киритинг",
 	"Uh-oh! There was an issue with the response.": "Диққат! Жавобда муаммо юз берди.",
 	"UI": "Фойдаланувчи интерфейси",
+	"UI Scale": "",
 	"Unarchive All": "Ҳаммасини архивдан чиқариш",
 	"Unarchive All Archived Chats": "Барча архивланган суҳбатларни архивдан чиқариш",
 	"Unarchive Chat": "Чатни архивдан чиқариш",
@@ -1715,6 +1726,8 @@
 	"Voice": "Овоз",
 	"Voice Input": "Овозли киритиш",
 	"Voice mode": "Овоз режими",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Огоҳлантириш",
 	"Warning:": "Огоҳлантириш:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Огоҳлантириш: Буни ёқиш фойдаланувчиларга серверга ихтиёрий кодни юклаш имконини беради.",
