--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "",
 	"Additional Parameters": "",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "Các thay đổi cài đặt này sẽ áp dụng cho tất cả người sử dụng.",
 	"admin": "quản trị viên",
 	"Admin": "Quản trị",
@@ -130,6 +131,7 @@
 	"API Key created.": "Khóa API đã tạo",
 	"API Key Endpoint Restrictions": "Hạn chế Endpoint Khóa API",
 	"API keys": "API Keys",
+	"API Keys": "",
 	"API Mode": "",
 	"API Version": "",
 	"API Version is required": "",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "",
 	"DD/MM/YYYY": "",
 	"December": "Tháng 12",
+	"Decrease UI Scale": "",
 	"Deepgram": "",
 	"Default": "Mặc định",
 	"Default (Open AI)": "Mặc định (Open AI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "Mô hình embedding",
 	"Embedding Model Engine": "Trình xử lý embedding",
 	"Embedding model set to \"{{embedding_model}}\"": "Mô hình embedding đã được thiết lập thành \"{{embedding_model}}\"",
-	"Enable API Key": "Bật Khóa API",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "Bật tạo tự động hoàn thành cho tin nhắn chat",
 	"Enable Code Execution": "Bật Thực thi Mã",
 	"Enable Code Interpreter": "Bật Trình thông dịch Mã",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "",
 	"Enforce Temporary Chat": "Bắt buộc Chat nháp",
 	"Enhance": "",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Đảm bảo tệp CSV của bạn bao gồm 4 cột theo thứ tự sau: Name, Email, Password, Role.",
 	"Enter {{role}} message here": "Nhập yêu cầu của {{role}} ở đây",
 	"Enter a detail about yourself for your LLMs to recall": "Nhập chi tiết về bản thân của bạn để LLMs có thể nhớ",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "Nhập URL Máy chủ Docling",
 	"Enter Document Intelligence Endpoint": "Nhập Endpoint Trí tuệ Tài liệu",
 	"Enter Document Intelligence Key": "Nhập Khóa Trí tuệ Tài liệu",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "Nhập các tên miền được phân tách bằng dấu phẩy (ví dụ: example.com,site.org)",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "Nhập Khóa API Exa",
 	"Enter External Document Loader API Key": "",
 	"Enter External Document Loader URL": "",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "Tải chat (.json)",
 	"Export Chats": "Tải nội dung chat về máy",
 	"Export Config to JSON File": "Xuất Cấu hình ra Tệp JSON",
+	"Export Models": "",
 	"Export Presets": "Xuất các Preset",
 	"Export Prompt Suggestions": "",
+	"Export Prompts": "",
 	"Export to CSV": "Xuất ra CSV",
+	"Export Tools": "",
 	"Export Users": "",
 	"External": "Bên ngoài",
 	"External Document Loader URL required.": "",
@@ -864,16 +871,20 @@
 	"Import Chats": "Nạp lại nội dung chat",
 	"Import Config from JSON File": "Nhập Cấu hình từ Tệp JSON",
 	"Import From Link": "",
+	"Import Models": "",
 	"Import Notes": "",
 	"Import Presets": "Nhập các Preset",
 	"Import Prompt Suggestions": "",
+	"Import Prompts": "",
 	"Import successful": "",
+	"Import Tools": "",
 	"Important Update": "Bản cập nhật quan trọng",
 	"In order to force OCR, performing OCR must be enabled.": "",
 	"Include": "Bao gồm",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "Bao gồm cờ `--api-auth` khi chạy stable-diffusion-webui",
 	"Include `--api` flag when running stable-diffusion-webui": "Bao gồm flag `--api` khi chạy stable-diffusion-webui",
 	"Includes SharePoint": "Bao gồm SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "Ảnh hưởng đến tốc độ thuật toán phản hồi lại phản hồi từ văn bản được tạo. Tốc độ học thấp hơn sẽ dẫn đến các điều chỉnh chậm hơn, trong khi tốc độ học cao hơn sẽ làm cho thuật toán phản ứng nhanh hơn.",
 	"Info": "Thông tin",
 	"Initials": "",
@@ -1066,7 +1077,6 @@
 	"New Function": "",
 	"New Knowledge": "",
 	"New Model": "",
-	"New Note": "",
 	"New Password": "Mật khẩu mới",
 	"New Prompt": "",
 	"New Temporary Chat": "",
@@ -1641,6 +1651,7 @@
 	"Type Hugging Face Resolve (Download) URL": "Nhập URL Hugging Face Resolve (Tải xuống)",
 	"Uh-oh! There was an issue with the response.": "Ôi! Đã có sự cố với phản hồi.",
 	"UI": "Giao diện",
+	"UI Scale": "",
 	"Unarchive All": "Bỏ lưu trữ Tất cả",
 	"Unarchive All Archived Chats": "Bỏ lưu trữ Tất cả Chat Đã Lưu trữ",
 	"Unarchive Chat": "Bỏ lưu trữ Chat",
@@ -1714,6 +1725,8 @@
 	"Voice": "Giọng nói",
 	"Voice Input": "Nhập liệu bằng Giọng nói",
 	"Voice mode": "",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "Cảnh báo",
 	"Warning:": "Cảnh báo:",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "Cảnh báo: Bật tính năng này sẽ cho phép người dùng tải lên mã tùy ý trên máy chủ.",
