--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -66,6 +66,7 @@
 	"Additional Config": "額外設定",
 	"Additional configuration options for marker. This should be a JSON string with key-value pairs. For example, '{\"key\": \"value\"}'. Supported keys include: disable_links, keep_pageheader_in_output, keep_pagefooter_in_output, filter_blank_pages, drop_repeated_text, layout_coverage_threshold, merge_threshold, height_tolerance, gap_threshold, image_threshold, min_line_length, level_count, default_level": "Datalab Marker 的額外設定選項，可以填寫一個包含鍵值對的 JSON 字串。例如：{\"key\": \"value\"}。支援的鍵包括：disable_links、keep_pageheader_in_output、keep_pagefooter_in_output、filter_blank_pages、drop_repeated_text、layout_coverage_threshold、merge_threshold、height_tolerance、gap_threshold、image_threshold、min_line_length、level_count 和 default_level。",
 	"Additional Parameters": "額外參數",
+	"Adds filenames, titles, sections, and snippets into the BM25 text to improve lexical recall.": "",
 	"Adjusting these settings will apply changes universally to all users.": "調整這些設定將會影響所有使用者。",
 	"admin": "管理員",
 	"Admin": "管理員",
@@ -130,6 +131,7 @@
 	"API Key created.": "API 金鑰已建立。",
 	"API Key Endpoint Restrictions": "API 金鑰端點限制",
 	"API keys": "API 金鑰",
+	"API Keys": "",
 	"API Mode": "API 模式",
 	"API Version": "API 版本",
 	"API Version is required": "API 版本為必填項目",
@@ -377,6 +379,7 @@
 	"Datalab Marker API": "Datalab Marker API",
 	"DD/MM/YYYY": "DD/MM/YYYY",
 	"December": "12 月",
+	"Decrease UI Scale": "",
 	"Deepgram": "Deepgram",
 	"Default": "預設",
 	"Default (Open AI)": "預設 (OpenAI)",
@@ -517,7 +520,7 @@
 	"Embedding Model": "嵌入模型",
 	"Embedding Model Engine": "嵌入模型引擎",
 	"Embedding model set to \"{{embedding_model}}\"": "嵌入模型已設定為「{{embedding_model}}」",
-	"Enable API Key": "啟用 API 金鑰",
+	"Enable API Keys": "",
 	"Enable autocomplete generation for chat messages": "啟用對話訊息的自動完成",
 	"Enable Code Execution": "啟用程式碼執行",
 	"Enable Code Interpreter": "啟用程式碼直譯器",
@@ -533,6 +536,7 @@
 	"Endpoint URL": "端點 URL",
 	"Enforce Temporary Chat": "強制使用臨時對話",
 	"Enhance": "增強",
+	"Enrich Hybrid Search Text": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "請確認您的 CSV 檔案包含以下 4 個欄位，並按照此順序排列：姓名、電子郵件、密碼、角色。",
 	"Enter {{role}} message here": "在此輸入 {{role}} 訊息",
 	"Enter a detail about yourself for your LLMs to recall": "輸入有關您的詳細資訊，讓您的大型語言模型可以回想起來",
@@ -563,7 +567,7 @@
 	"Enter Docling Server URL": "請輸入 Docling 伺服器 URL",
 	"Enter Document Intelligence Endpoint": "輸入 Document Intelligence 端點",
 	"Enter Document Intelligence Key": "輸入 Document Intelligence 金鑰",
-	"Enter domains separated by commas (e.g., example.com,site.org)": "輸入網域，以逗號分隔（例如：example.com, site.org）",
+	"Enter domains separated by commas (e.g., example.com,site.org,!excludedsite.com)": "",
 	"Enter Exa API Key": "輸入 Exa API 金鑰",
 	"Enter External Document Loader API Key": "請輸入外部文件載入器 API 金鑰",
 	"Enter External Document Loader URL": "請輸入外部文件載入器 URL",
@@ -685,9 +689,12 @@
 	"Export chat (.json)": "匯出對話紀錄（.json）",
 	"Export Chats": "匯出對話紀錄",
 	"Export Config to JSON File": "將設定匯出為 JSON 檔案",
+	"Export Models": "",
 	"Export Presets": "匯出預設集",
 	"Export Prompt Suggestions": "匯出提示建議",
+	"Export Prompts": "",
 	"Export to CSV": "匯出為 CSV",
+	"Export Tools": "",
 	"Export Users": "匯出所有使用者資訊",
 	"External": "外部",
 	"External Document Loader URL required.": "需要提供外部文件載入器 URL。",
@@ -864,16 +871,20 @@
 	"Import Chats": "匯入對話紀錄",
 	"Import Config from JSON File": "從 JSON 檔案匯入設定",
 	"Import From Link": "從連結匯入",
+	"Import Models": "",
 	"Import Notes": "匯入筆記",
 	"Import Presets": "匯入預設集",
 	"Import Prompt Suggestions": "匯入提示建議",
+	"Import Prompts": "",
 	"Import successful": "匯入成功",
+	"Import Tools": "",
 	"Important Update": "重要更新",
 	"In order to force OCR, performing OCR must be enabled.": "要啟用「強制執行 OCR」，必須先啟用「執行 OCR」。",
 	"Include": "包含",
 	"Include `--api-auth` flag when running stable-diffusion-webui": "執行 stable-diffusion-webui 時包含 `--api-auth` 參數",
 	"Include `--api` flag when running stable-diffusion-webui": "執行 stable-diffusion-webui 時包含 `--api` 參數",
 	"Includes SharePoint": "包含 SharePoint",
+	"Increase UI Scale": "",
 	"Influences how quickly the algorithm responds to feedback from the generated text. A lower learning rate will result in slower adjustments, while a higher learning rate will make the algorithm more responsive.": "影響演算法對生成文字回饋的反應速度。較低的學習率會導致調整速度較慢，而較高的學習率會使演算法反應更靈敏。",
 	"Info": "資訊",
 	"Initials": "姓名縮寫",
@@ -1066,7 +1077,6 @@
 	"New Function": "新增函式",
 	"New Knowledge": "新增知識",
 	"New Model": "新增模型",
-	"New Note": "新增筆記",
 	"New Password": "新密碼",
 	"New Prompt": "新增提示詞",
 	"New Temporary Chat": "新增臨時對話",
@@ -1641,6 +1651,7 @@
 	"Type Hugging Face Resolve (Download) URL": "輸入 Hugging Face 的解析（下載）URL",
 	"Uh-oh! There was an issue with the response.": "哎呀！回應出了點問題。",
 	"UI": "使用者介面",
+	"UI Scale": "",
 	"Unarchive All": "解除封存全部",
 	"Unarchive All Archived Chats": "解除封存全部已封存對話",
 	"Unarchive Chat": "解除封存對話",
@@ -1714,6 +1725,8 @@
 	"Voice": "語音",
 	"Voice Input": "語音輸入",
 	"Voice mode": "語音模式",
+	"Voice Mode Custom Prompt": "",
+	"Voice Mode Prompt": "",
 	"Warning": "警告",
 	"Warning:": "警告：",
 	"Warning: Enabling this will allow users to upload arbitrary code on the server.": "警告：啟用此功能將允許使用者在伺服器上上傳任意程式碼。",
